Mostly about new Lead models, and new implementation of validation of hands with the actual opening lead. ipnyb files checked and updated  BBA-updates  Some configuration changes and updates

--- a/UCBC 2024/Simulations/Bidding1S.ipynb
+++ b/UCBC 2024/Simulations/Bidding1S.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "19dbfeb7",
    "metadata": {},
    "outputs": [
@@ -88,8 +88,11 @@
     "vuln_ns, vuln_ew = False, True\n",
     "hand = 'A.8xx.Jxx.AQxxxx'\n",
     "\n",
+    "from ddsolver import ddsolver\n",
+    "dds = ddsolver.DDSolver()\n",
+    "\n",
     "auction = [\"1S\"]\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 1, 0, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 1, 0, dds,  False)\n",
     "\n",
     "bid = bot_bid.bid(auction)\n",
     "bid.to_dict()['candidates']\n",
@@ -99,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f8eaf1c5",
    "metadata": {},
    "outputs": [
@@ -116,7 +119,7 @@
    ],
    "source": [
     "auction = [\"1S\",\"PASS\",\"1N\",\"PASS\",\"2C\"]\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 1, 0, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 1, 0, dds, False)\n",
     "\n",
     "bid = bot_bid.bid(auction)\n",
     "bid.to_dict()['candidates']\n"
