--- a/UCBC 2024/Simulations/Bidding3D.ipynb
+++ b/UCBC 2024/Simulations/Bidding3D.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "19dbfeb7",
    "metadata": {},
    "outputs": [
@@ -96,27 +96,30 @@
     "# East deals, EW vulnerable.\n",
     "vuln_ns, vuln_ew = True, True\n",
     "\n",
+    "from ddsolver import ddsolver\n",
+    "dds = ddsolver.DDSolver()\n",
+    "\n",
     "# you sit West and hold:\n",
     "hand = '843.9765.A73.AK4'\n",
     "\n",
     "# the auction goes:\n",
     "auction = []\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 0, 0, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 0, 0, dds, False)\n",
     "bid = bot_bid.bid(auction)\n",
     "print(bid.to_dict()['candidates'])\n",
     "\n",
     "auction = [\"PAD_START\"]\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 1, 1, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 1, 1, dds, False)\n",
     "bid = bot_bid.bid(auction)\n",
     "print(bid.to_dict()['candidates'])\n",
     "\n",
     "auction = [\"PAD_START\",\"PAD_START\"]\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 2, 2, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 2, 2, dds, False)\n",
     "bid = bot_bid.bid(auction)\n",
     "print(bid.to_dict()['candidates'])\n",
     "\n",
     "auction = [\"PAD_START\",\"PAD_START\",\"PAD_START\"]\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 3, 3, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 3, 3, dds, False)\n",
     "bid = bot_bid.bid(auction)\n",
     "print(bid.to_dict()['candidates'])\n",
     "\n",
