--- a/UCBC 2024/Simulations/Bidding4HX.ipynb
+++ b/UCBC 2024/Simulations/Bidding4HX.ipynb
@@ -15,20 +15,10 @@
    "execution_count": 1,
    "id": "59a5664c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "non-resource variables are not supported in the long term\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
-    "import od\n",
+    "import os\n",
     "sys.path.append('../../src')\n",
     "os.environ['BEN_HOME'] = \"../..\"\n",
     "\n",
@@ -53,8 +43,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_same-5556000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_same-5556000\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:3: The name tf.disable_v2_behavior is deprecated. Please use tf.compat.v1.disable_v2_behavior instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\ProgramData\\miniconda3\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:98: disable_resource_variables (from tensorflow.python.ops.resource_variables_toggle) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "non-resource variables are not supported in the long term\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:12: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
+      "\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:21: The name tf.train.import_meta_graph is deprecated. Please use tf.compat.v1.train.import_meta_graph instead.\n",
+      "\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_V2-3125000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_V2-3125000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/contract-193200\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_V2-3125000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/Jack/lr3-1000000\n",
@@ -62,11 +63,11 @@
       "INFO:tensorflow:Restoring parameters from ..\\Models/lefty_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/dummy_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/righty_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_nt-950000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lefty_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/dummy_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/righty_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_suit-1278000\n"
+      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_suit-999000\n"
      ]
     }
    ],
@@ -90,9 +91,17 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loaded lib dds.dll\n",
+      "DDSolver being loaded - dds mode 1\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[{'call': '2N', 'insta_score': 0.99}]"
+       "[{'call': '2N', 'insta_score': 0.999}]"
       ]
      },
      "execution_count": 3,
@@ -106,9 +115,11 @@
     "\n",
     "# you sit West and hold:\n",
     "hand = 'K6.98432.KQ.AT52'\n",
+    "from ddsolver import ddsolver\n",
+    "dds = ddsolver.DDSolver()\n",
     "\n",
     "auction = ['PAD_START', 'PAD_START', '1H', 'PASS']\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 0, 2, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 0, 2, dds, False)\n",
     "\n",
     "bid = bot_bid.bid(auction)\n",
     "bid.to_dict()['candidates']\n",
@@ -125,8 +136,31 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': '4H', 'insta_score': 0.859, 'expected_score': 493, 'adjustment': 43},\n",
-       " {'call': '3H', 'insta_score': 0.13, 'expected_score': 468, 'adjustment': 6}]"
+       "[{'call': '4H',\n",
+       "  'insta_score': 0.295,\n",
+       "  'adjustment': 15,\n",
+       "  'expected_score': 266,\n",
+       "  'expected_tricks': 10.4},\n",
+       " {'call': '3S',\n",
+       "  'insta_score': 0.316,\n",
+       "  'adjustment': 16,\n",
+       "  'expected_score': 209,\n",
+       "  'expected_tricks': 10.4},\n",
+       " {'call': '3H',\n",
+       "  'insta_score': 0.139,\n",
+       "  'adjustment': 7,\n",
+       "  'expected_score': 208,\n",
+       "  'expected_tricks': 10.4},\n",
+       " {'call': '4C',\n",
+       "  'insta_score': 0.126,\n",
+       "  'adjustment': 6,\n",
+       "  'expected_score': 188,\n",
+       "  'expected_tricks': 10.4},\n",
+       " {'call': '4N',\n",
+       "  'insta_score': 0.099,\n",
+       "  'adjustment': 5,\n",
+       "  'expected_score': 188,\n",
+       "  'expected_tricks': 10.4}]"
       ]
      },
      "execution_count": 4,
@@ -150,7 +184,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': 'PASS', 'insta_score': 0.992}]"
+       "[{'call': 'PASS', 'insta_score': 0.928}]"
       ]
      },
      "execution_count": 5,
@@ -168,7 +202,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -182,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
