--- a/UCBC 2024/Simulations/Bidding5D.ipynb
+++ b/UCBC 2024/Simulations/Bidding5D.ipynb
@@ -20,23 +20,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:3: The name tf.disable_v2_behavior is deprecated. Please use tf.compat.v1.disable_v2_behavior instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\ProgramData\\miniconda3\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:98: disable_resource_variables (from tensorflow.python.ops.resource_variables_toggle) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_same-5556000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_same-5556000\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:12: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
+      "\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:21: The name tf.train.import_meta_graph is deprecated. Please use tf.compat.v1.train.import_meta_graph instead.\n",
+      "\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_V2-3125000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_V2-3125000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/contract-193200\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_V2-3125000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/Jack/lr3-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-32768000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/lefty-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/dummy-920000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/righty-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/decl-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/lefty-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/dummy-920000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/righty-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/decl-1000000\n"
+      "INFO:tensorflow:Restoring parameters from ..\\Models/lefty_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/dummy_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/righty_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/lefty_suit-999000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/dummy_suit-999000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/righty_suit-999000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_suit-999000\n"
      ]
     }
    ],
@@ -70,21 +78,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "19dbfeb7",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loaded lib dds.dll\n",
+      "DDSolver being loaded - dds mode 1\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[{'call': 'PASS',\n",
-       "  'insta_score': 0.453,\n",
-       "  'expected_score': 19,\n",
-       "  'adjustment': 23},\n",
-       " {'call': '3D', 'insta_score': 0.388, 'expected_score': 17, 'adjustment': 19}]"
+       "[{'call': '3D',\n",
+       "  'insta_score': 0.307,\n",
+       "  'adjustment': 15,\n",
+       "  'expected_score': -6,\n",
+       "  'expected_tricks': 8.6},\n",
+       " {'call': 'PASS',\n",
+       "  'insta_score': 0.631,\n",
+       "  'adjustment': 32,\n",
+       "  'expected_score': -88,\n",
+       "  'expected_tricks': 8.5}]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,6 +113,9 @@
    "source": [
     "# East deals, EW vulnerable.\n",
     "vuln_ns, vuln_ew = False, False\n",
+    "\n",
+    "from ddsolver import ddsolver\n",
+    "dds = ddsolver.DDSolver()\n",
     "\n",
     "# you sit West and hold:\n",
     "hand = 'J.J82.A98632.T52'\n",
@@ -104,7 +128,7 @@
     "# if South deals we have two pads (because North and East are skipped)\n",
     "# etc.)\n",
     "auction = [\"PAD_START\",\"PAD_START\",\"1H\", \"1N\", \"2S\"]\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, seat=1, dealer=2, verbose=False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, seat=1, dealer=2, ddsolver=dds, verbose=False)\n",
     "\n",
     "bid = bot_bid.bid(auction)\n",
     "bid.to_dict()['candidates']\n",
@@ -121,26 +145,26 @@
     {
      "data": {
       "text/plain": [
-       "['8x.AQxxx.QJx.Kxx AKx.KTxx.Kx.Q8xx QT9xxxx.9.Tx.AJ9 J.J8x.A98xxx.Txx 0.84331 \\n 1H-1N-2S-P-2N-P-3S-P-4S-P-P-P (9, 8.8, 8.6)  \\n 1H-1N-2S-3D-P-P-3S-4D-P-P-P (6, 7.5, 7.6) ',\n",
-       " 'Axx.AKT9xx.x.J9x Kx.Qxx.KQJT.KQxx QT98xxx.x.xx.A8x J.J8x.A98xxx.Txx 0.81571 \\n 1H-1N-2S-P-3S-P-P-4D-P-P-4S-P-P-P (11, 10.0, 10.6)  \\n 1H-1N-2S-3D-3S-P-P-4D-P-P-P (8, 8.2, 8.8) ',\n",
-       " 'Ax.ATxxx.Tx.AJ8x Qxx.KQ9x.KQxx.Kx KT98xxx.x.J.Q9xx J.J8x.A98xxx.Txx 0.81217 \\n 1H-1N-2S-P-2N-P-3H-P-P-P (6, 5.6, 7.3)  \\n 1H-1N-2S-3D-3H-P-P-4D-P-P-P (9, 8.8, 9.4) ',\n",
-       " 'Tx.KQT9x.Kx.QJxx AQ8.Axxx.Qx.A98x K9xxxxx.x.JTx.Kx J.J8x.A98xxx.Txx 0.81157 \\n 1H-1N-2S-P-3H-P-4S-P-P-P (8, 8.0, 7.9)  \\n 1H-1N-2S-3D-P-P-3S-4D-P-P-P (8, 8.2, 7.9) ',\n",
-       " 'x.ATxxxx.Qxx.KQx AQ8x.KQ9x.Tx.AJx KT9xxxx..KJ.98xx J.J8x.A98xxx.Txx 0.79415 \\n 1H-1N-2S-P-3H-P-4S-P-P-P (7, 7.9, 7.9)  \\n 1H-1N-2S-3D-3H-P-3S-P-4H-P-P-P (5, 5.5, 6.0) ',\n",
-       " 'ATx.ATxxxx.Qx.xx K9.KQ9.KTx.AQ98x Q8xxxxx.x.Jx.KJx J.J8x.A98xxx.Txx 0.76204 \\n 1H-1N-2S-P-3S-P-P-4D-P-P-P (8, 8.4, 9.1)  \\n 1H-1N-2S-3D-P-P-3S-4D-P-P-P (8, 8.4, 9.1) ',\n",
-       " '9xx.AK9xx.KT.J9x KT8.QTxx.QJx.AKx AQxxxx.x.xx.Q8xx J.J8x.A98xxx.Txx 0.76119 \\n 1H-1N-2S-P-3S-P-P-4D-P-P-4S-P-P-P (9, 9.1, 8.8)  \\n 1H-1N-2S-3D-P-P-X-P-P-P (8, 7.8, 8.8) ',\n",
-       " '8xx.AQTxx.xx.A9x AQx.K9x.KJT.QJxx KT9xxx.xx.Qx.K8x J.J8x.A98xxx.Txx 0.75429 \\n 1H-1N-2S-P-3S-P-P-4D-P-P-P (9, 8.5, 8.3)  \\n 1H-1N-2S-3D-P-P-P (9, 8.5, 8.3) ',\n",
-       " '8.A9xxx.KQT.K9xx KQxx.KQTx.Jx.AJ8 AT9xxxx.x.xx.Qxx J.J8x.A98xxx.Txx 0.75272 \\n 1H-1N-2S-P-3H-P-P-4D-P-P-P (7, 6.8, 7.7)  \\n 1H-1N-2S-3D-P-P-P (7, 6.8, 7.7) ',\n",
-       " '9x.AK9xx.Jx.KJxx KTx.Qxx.KQx.AQ9x AQ8xxxx.Tx.Tx.8x J.J8x.A98xxx.Txx 0.74803 \\n 1H-1N-2S-P-3H-P-P-4D-P-P-4H-P-P-P (7, 6.5, 6.9)  \\n 1H-1N-2S-3D-P-P-P (9, 8.9, 8.8) ',\n",
-       " 'Txxx.ATxxx.x.AQJ A8.K9xx.KQx.Kxxx KQ9xxx.Q.JTx.98x J.J8x.A98xxx.Txx 0.74783 \\n 1H-1N-2S-P-3S-P-P-4D-P-P-P (9, 8.8, 9.2)  \\n 1H-1N-2S-3D-P-P-X-P-P-P (9, 8.8, 9.2) ',\n",
-       " 'xxx.AQTxx.xx.AKx AQ.K9xx.KQT.Q8xx KT98xxx.x.Jx.J9x J.J8x.A98xxx.Txx 0.74131 \\n 1H-1N-2S-P-3S-P-P-4D-P-P-4S-P-P-P (10, 9.3, 9.5)  \\n 1H-1N-2S-3D-3S-P-P-4D-P-P-P (8, 7.9, 8.8) ',\n",
-       " 'AKx.K9xxx.x.AQJx QTx.AQTx.KQxx.K8 98xxxx.x.JT.9xxx J.J8x.A98xxx.Txx 0.73786 \\n 1H-1N-2S-P-4D-P-P-P (2, 1.7, 6.9)  \\n 1H-1N-2S-3D-4S-P-P-P (8, 9.0, 8.8) ',\n",
-       " 'K8.AK9xx.JT.QJ8x Qxxx.QTx.KQxx.AK AT9xxx.xx.x.9xxx J.J8x.A98xxx.Txx 0.72852 \\n 1H-1N-2S-P-2N-P-3H-P-4H-P-P-P (8, 6.5, 7.5)  \\n 1H-1N-2S-3D-P-P-P (9, 9.6, 10.0) ',\n",
-       " 'AQ.KQxxxx.Qx.98x K8x.AT9x.Kxx.KQx T9xxxxx..JT.AJxx J.J8x.A98xxx.Txx 0.72742 \\n 1H-1N-2S-P-3H-P-P-4D-X-P-P-P (8, 8.3, 9.0)  \\n 1H-1N-2S-3D-3H-P-P-4D-P-P-P (8, 8.3, 9.0) ',\n",
-       " 'Kxx.AQ9xx.T.Q8xx Qxx.Txx.KQx.AKJx AT98xx.Kx.Jxx.9x J.J8x.A98xxx.Txx 0.72624 \\n 1H-1N-2S-P-3S-P-P-4D-P-P-P (9, 9.0, 9.2)  \\n 1H-1N-2S-3D-P-P-X-P-P-P (9, 9.0, 9.1) ',\n",
-       " 'KQx.AKTxx.QTx.8x Axx.Q9xx.KJ.AQxx T98xxx.x.xx.KJ9x J.J8x.A98xxx.Txx 0.72091 \\n 1H-1N-2S-P-2N-P-3H-P-4H-P-P-P (5, 5.6, 6.1)  \\n 1H-1N-2S-3D-3S-P-P-4D-P-P-P (9, 8.3, 8.5) ',\n",
-       " 'Kx.AT9xx.xx.K8xx QTx.KQx.KQT.AJ9x A98xxxx.xx.Jx.Qx J.J8x.A98xxx.Txx 0.71630 \\n 1H-1N-2S-P-3H-P-P-4D-P-P-P (10, 9.5, 10.1)  \\n 1H-1N-2S-3D-P-P-3S-4D-P-P-P (10, 9.5, 10.1) ',\n",
-       " 'Kx.AQTxxx.Qx.8xx QTx.K9.KTxx.AKxx A98xxxx.xx.J.QJ9 J.J8x.A98xxx.Txx 0.71493 \\n 1H-1N-2S-P-3H-P-P-4D-P-P-P (11, 9.8, 9.8)  \\n 1H-1N-2S-3D-3H-P-P-4D-P-P-P (11, 9.8, 9.8) ',\n",
-       " 'AKxx.KQTxx.Tx.8x Tx.A9xx.KQx.AK9x Q98xxx.x.Jx.QJxx J.J8x.A98xxx.Txx 0.71395 \\n 1H-1N-2S-P-3S-P-P-4D-P-P-P (10, 9.9, 10.5)  \\n 1H-1N-2S-3D-3S-4D-P-P-P (10, 9.9, 10.6) ']"
+       "['Qxxxxxx.x.Qx.KJ8 J.J8x.A98xxx.Txx A9.AKTxxx.Tx.xxx KT8.Q9x.KJx.AQ9x 0.84082 \\n 1H-1N-2S-P-P-P (9, 9.1)  \\n 1H-1N-2S-3D-3H-P-P-P (8, 7.3) ',\n",
+       " 'KT8xxx.9.Qxx.K8x J.J8x.A98xxx.Txx Axx.Qxxxx.JT.Axx Q9x.AKTx.Kx.QJ9x 0.84082 \\n 1H-1N-2S-P-P-P (9, 8.8)  \\n 1H-1N-2S-3D-P-P-P (9, 8.1) ',\n",
+       " 'AT98xxx..KJx.xxx J.J8x.A98xxx.Txx Kx.KT9xxx.xx.KQ8 Qxx.AQxx.QT.AJ9x 0.83984 \\n 1H-1N-2S-P-P-P (9, 9.1)  \\n 1H-1N-2S-3D-P-P-3S-P-P-P (9, 9.1) ',\n",
+       " 'QT9xxxx.x.QJ.Axx J.J8x.A98xxx.Txx A8.AQ9xxx.Txx.9x Kxx.KTx.Kx.KQJ8x 0.81055 \\n 1H-1N-2S-P-P-3C-P-P-P (8, 8.1)  \\n 1H-1N-2S-3D-P-P-P (7, 8.3) ',\n",
+       " 'AQxxxx.x.xx.Q8xx J.J8x.A98xxx.Txx 9xx.AK9xx.KT.J9x KT8.QTxx.QJx.AKx 0.79883 \\n 1H-1N-2S-P-P-P (9, 9.1)  \\n 1H-1N-2S-3D-3S-P-P-P (9, 9.1) ',\n",
+       " 'AQT8xxx.xx.K.xxx J.J8x.A98xxx.Txx 9.AKT9x.QJTx.98x Kxxx.Qxx.xx.AKQJ 0.79492 \\n 1H-1N-2S-P-P-P (8, 8.4)  \\n 1H-1N-2S-3D-P-3N-P-P-P (6, 5.7) ',\n",
+       " 'QT9xxxx.Qx.x.Qxx J.J8x.A98xxx.Txx Kx.T9xxx.KQx.KJx A8x.AKx.JTx.A98x 0.78906 \\n 1H-1N-2S-P-P-P (8, 8.1)  \\n 1H-1N-2S-3D-P-P-P (9, 9.7) ',\n",
+       " 'KQ9xxx.Q.JTx.98x J.J8x.A98xxx.Txx Txxx.ATxxx.x.AQJ A8.K9xx.KQx.Kxxx 0.78711 \\n 1H-1N-2S-P-P-P (10, 9.6)  \\n 1H-1N-2S-3D-3S-P-P-P (10, 9.6) ',\n",
+       " 'Q98xxxx.T.Kx.Kxx J.J8x.A98xxx.Txx x.AQ9xxx.Qx.QJxx AKTx.Kxx.JTx.A98 0.78711 \\n 1H-1N-2S-P-P-P (8, 7.6)  \\n 1H-1N-2S-3D-P-3N-P-P-P (8, 8.0) ',\n",
+       " 'Q98xxxx.Qx.Tx.Jx J.J8x.A98xxx.Txx Ax.9xxxx.Jx.AKxx KTx.AKT.KQx.Q98x 0.77832 \\n 1H-1N-2S-P-P-P (8, 8.0)  \\n 1H-1N-2S-3D-P-P-P (9, 9.4) ',\n",
+       " 'QT9xxx.x.Qxx.A9x J.J8x.A98xxx.Txx xx.AKT9xx.T.KJxx AK8x.Qxx.KJx.Q8x 0.77441 \\n 1H-1N-2S-P-P-P (8, 8.3)  \\n 1H-1N-2S-3D-4H-P-P-P (8, 8.3) ',\n",
+       " 'AQT98xx.x.Jx.xxx J.J8x.A98xxx.Txx xx.KT9xxx.Qxx.AQ Kxx.AQx.KT.KJ98x 0.77441 \\n 1H-1N-2S-P-P-3C-P-P-P (9, 9.1)  \\n 1H-1N-2S-3D-P-P-P (10, 9.1) ',\n",
+       " 'A98xxxx.xx.Jx.Qx J.J8x.A98xxx.Txx Kx.AT9xx.xx.K8xx QTx.KQx.KQT.AJ9x 0.77295 \\n 1H-1N-2S-P-P-P (8, 8.5)  \\n 1H-1N-2S-3D-P-P-P (10, 9.5) ',\n",
+       " 'AT98xx.Kx.Jxx.9x J.J8x.A98xxx.Txx Kxx.AQ9xx.T.Q8xx Qxx.Txx.KQx.AKJx 0.76953 \\n 1H-1N-2S-P-P-P (10, 9.0)  \\n 1H-1N-2S-3D-3S-P-P-P (10, 9.0) ',\n",
+       " 'QT98xxx.K.x.Q9xx J.J8x.A98xxx.Txx x.Q9xxxx.Kxx.AK8 AKxx.ATx.QJT.Jxx 0.76953 \\n 1H-1N-2S-P-P-P (9, 8.4)  \\n 1H-1N-2S-3D-3H-P-P-P (8, 7.6) ',\n",
+       " 'KQ98xx.x.Jxx.Q9x J.J8x.A98xxx.Txx Tx.AKT9xx.Kx.8xx Axxx.Qxx.QT.AKJx 0.76660 \\n 1H-1N-2S-P-P-P (9, 8.0)  \\n 1H-1N-2S-3D-3H-P-P-P (7, 6.1) ',\n",
+       " 'AQTxxx.9.xx.J8xx J.J8x.A98xxx.Txx 9xx.QTxxx.QJ.AKx K8x.AKxx.KTx.Q9x 0.76318 \\n 1H-1N-2S-P-P-P (9, 9.5)  \\n 1H-1N-2S-3D-P-P-P (10, 8.2) ',\n",
+       " '8xxxxxx.xx.KQ.98 J.J8x.A98xxx.Txx A9.KQT9x.JT.QJxx KQT.Axx.xxx.AKxx 0.76074 \\n 1H-1N-2S-P-P-P (7, 7.2)  \\n 1H-1N-2S-3D-P-P-P (10, 8.9) ',\n",
+       " 'Q98xxxx.Ax.xx.8x J.J8x.A98xxx.Txx Kxx.Qxxxx.T.AKJx AT.KT9.KQJx.Q9xx 0.75977 \\n 1H-1N-2S-P-P-P (10, 9.4)  \\n 1H-1N-2S-3D-3S-4D-P-P-P (9, 9.1) ',\n",
+       " 'KT9xxxx..KJ.98xx J.J8x.A98xxx.Txx x.ATxxxx.Qxx.KQx AQ8x.KQ9x.Tx.AJx 0.75684 \\n 1H-1N-2S-P-P-P (7, 7.9)  \\n 1H-1N-2S-3D-P-P-P (9, 8.1) ']"
       ]
      },
      "execution_count": 3,
@@ -161,18 +185,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': 'PASS',\n",
-       "  'insta_score': 0.628,\n",
-       "  'expected_score': -194,\n",
-       "  'adjustment': 314},\n",
-       " {'call': 'X',\n",
-       "  'insta_score': 0.228,\n",
-       "  'expected_score': -275,\n",
-       "  'adjustment': 114},\n",
-       " {'call': '5D',\n",
-       "  'insta_score': 0.143,\n",
-       "  'expected_score': -590,\n",
-       "  'adjustment': 71}]"
+       "[{'call': 'PASS', 'insta_score': 0.911}]"
       ]
      },
      "execution_count": 4,
@@ -181,7 +194,7 @@
     }
    ],
    "source": [
-    "auction = [\"1H\", \"1N\", \"2S\",\"3D\",\"3S\",\"PASS\",\"4S\"]\n",
+    "auction = [\"PAD_START\",\"PAD_START\",\"1H\", \"1N\", \"2S\",\"3D\",\"3S\",\"PASS\",\"4S\"]\n",
     "bid = bot_bid.bid(auction)\n",
     "\n",
     "bid.to_dict()['candidates']"
@@ -220,16 +233,7 @@
     {
      "data": {
       "text/plain": [
-       "['Q9x.QT9xx.Tx.AK8 Kxx.AKxx.Kxx.Qxx AT8xxx.x.QJ.J9xx J.J8x.A98xxx.Txx 0.54403 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (9, 9.2, 9.2)  \\n 1H-1N-2S-3D-3S-P-4S-X-P-P-P (9, 9.2, 9.2)  \\n 1H-1N-2S-3D-3S-P-4S-5D-X-P-P-P (9, 8.5, 8.4) ',\n",
-       " 'AQTx.9xxxx..AQ8x xxx.AKTx.KQx.K9x K98xx.Q.JTxx.Jxx J.J8x.A98xxx.Txx 0.53757 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (10, 10.3, 10.3)  \\n 1H-1N-2S-3D-3S-P-4S-X-P-P-P (10, 10.3, 10.1)  \\n 1H-1N-2S-3D-3S-P-4S-5D-X-P-P-P (9, 8.3, 9.7) ',\n",
-       " 'A9x.QT9xxx.J.KQ9 KTx.AKxx.KQT.xxx Q8xxxx..xxx.AJ8x J.J8x.A98xxx.Txx 0.53577 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (11, 10.8, 9.9)  \\n 1H-1N-2S-3D-3S-P-4S-X-P-P-P (11, 10.8, 9.6)  \\n 1H-1N-2S-3D-3S-P-4S-5D-X-P-P-P (6, 7.6, 8.6) ',\n",
-       " 'A9xx.KQTxx.Qxx.Q KQx.A9xx.KJx.K9x T8xxx.x.T.AJ8xxx J.J8x.A98xxx.Txx 0.51854 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (9, 9.1, 9.1)  \\n 1H-1N-2S-3D-3S-P-4S-X-P-P-P (9, 9.1, 8.9)  \\n 1H-1N-2S-3D-3S-P-4S-5D-X-P-P-P (9, 8.0, 8.7) ',\n",
-       " 'AQ8x.KQxxx.x.Q8x Kxx.ATx.KJT.A9xx T9xxx.9x.Qxx.KJx J.J8x.A98xxx.Txx 0.50689 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (9, 8.5, 8.9)  \\n 1H-1N-2S-3D-3S-P-4S-X-P-P-P (9, 8.5, 8.8)  \\n 1H-1N-2S-3D-3S-P-4S-5D-X-P-P-P (9, 9.1, 9.0) ',\n",
-       " 'QT9x.KQT9xx.x.Ax AKx.Axxx.KJT.98x 8xxxx..Qxx.KQJxx J.J8x.A98xxx.Txx 0.50514 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (10, 9.4, 9.2)  \\n 1H-1N-2S-3D-3S-P-4S-X-P-P-P (10, 9.4, 9.1)  \\n 1H-1N-2S-3D-3S-P-4S-5D-X-P-P-P (7, 8.0, 8.4) ',\n",
-       " 'Axx.KT9xx.Kx.98x KQx.Axx.QJTx.Kxx T98xxx.Qx.x.AQJx J.J8x.A98xxx.Txx 0.50349 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (9, 9.6, 8.9)  \\n 1H-1N-2S-3D-3S-P-4S-X-P-P-P (9, 9.6, 8.8)  \\n 1H-1N-2S-3D-3S-P-4S-5D-X-P-P-P (6, 7.7, 8.2) ',\n",
-       " 'AQ9x.KT9xx.Q.K9x Txx.AQx.KJTx.AJx K8xxx.xx.xx.Q8xx J.J8x.A98xxx.Txx 0.48675 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (9, 8.4, 8.7)  \\n 1H-1N-2S-3D-3S-P-4S-X-P-P-P (9, 8.4, 8.5)  \\n 1H-1N-2S-3D-3S-P-4S-5D-X-P-P-P (10, 10.4, 10.5) ',\n",
-       " 'K98x.AT9xx.Kx.9x Ax.KQxxx.QJx.KJ8 QTxxxx..Tx.AQxxx J.J8x.A98xxx.Txx 0.48490 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (11, 10.9, 10.4)  \\n 1H-1N-2S-3D-3S-P-4S-X-P-P-P (11, 10.9, 10.2)  \\n 1H-1N-2S-3D-3S-P-4S-5D-X-P-P-P (7, 7.3, 8.6) ',\n",
-       " 'QTxx.KQTxxx.Q.Kx A9x.A9xx.KJT.QJ8 K8xxx..xxx.A9xxx J.J8x.A98xxx.Txx 0.48409 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (11, 9.8, 9.7)  \\n 1H-1N-2S-3D-3S-P-4S-X-P-P-P (11, 9.8, 9.7)  \\n 1H-1N-2S-3D-3S-P-4S-5D-P-P-X-P-P-P (7, 8.8, 9.1) ']"
+       "[]"
       ]
      },
      "execution_count": 5,
@@ -244,7 +248,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -258,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
