--- a/UCBC 2024/Simulations/Multilandy.ipynb
+++ b/UCBC 2024/Simulations/Multilandy.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "19dbfeb7",
    "metadata": {},
    "outputs": [
@@ -85,9 +85,12 @@
    "source": [
     "# EW vulnerable.\n",
     "vuln_ns, vuln_ew = False, True\n",
+    "from ddsolver import ddsolver\n",
+    "dds = ddsolver.DDSolver()\n",
+    "\n",
     "# you sit North and hold:\n",
     "hand = 'QT5.T8.KQT87.864'\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 0, 3, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 0, 3, dds, False)\n",
     "\n",
     "# the auction goes:\n",
     "auction = [\"PAD_START\",\"PAD_START\",\"PAD_START\",\"PASS\"]\n",
