--- a/UCBC 2024/Simulations/OpeningLead4H.ipynb
+++ b/UCBC 2024/Simulations/OpeningLead4H.ipynb
@@ -42,23 +42,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:3: The name tf.disable_v2_behavior is deprecated. Please use tf.compat.v1.disable_v2_behavior instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\ProgramData\\miniconda3\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:98: disable_resource_variables (from tensorflow.python.ops.resource_variables_toggle) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_same-5556000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_same-5556000\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:12: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
+      "\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:21: The name tf.train.import_meta_graph is deprecated. Please use tf.compat.v1.train.import_meta_graph instead.\n",
+      "\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_V2-3125000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_V2-3125000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/contract-193200\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_V2-3125000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/Jack/lr3-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-32768000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/lefty-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/dummy-920000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/righty-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/decl-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/lefty-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/dummy-920000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/righty-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/decl-1000000\n"
+      "INFO:tensorflow:Restoring parameters from ..\\Models/lefty_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/dummy_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/righty_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/lefty_suit-999000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/dummy_suit-999000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/righty_suit-999000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_suit-999000\n"
      ]
     }
    ],
@@ -77,7 +85,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loaded lib dds.dll\n"
+      "Loaded lib dds.dll\n",
+      "DDSolver being loaded - dds mode 1\n"
      ]
     }
    ],
@@ -88,9 +97,11 @@
     "# the auction goes:\n",
     "auction = [\"PASS\", \"1N\", \"PASS\", \"2D\", \"X\", \"2H\", \"PASS\", \"4H\", \"PASS\", \"PASS\", \"PASS\"]\n",
     "\n",
-    "# what to lead?\n",
+    "from ddsolver import ddsolver\n",
+    "dds = ddsolver.DDSolver()\n",
     "\n",
-    "lead_bot = BotLead([True, True], hand, models, sampler, seat, 0, False)\n",
+    "# what to lead?\n",
+    "lead_bot = BotLead([True, True], hand, models, sampler, seat, 0, dds, False)\n",
     "lead = lead_bot.find_opening_lead(auction)"
    ]
   },
@@ -103,7 +114,7 @@
     {
      "data": {
       "text/plain": [
-       "D3"
+       "SA"
       ]
      },
      "execution_count": 4,
@@ -134,22 +145,21 @@
     {
      "data": {
       "text/plain": [
-       "[{'card': 'Dx',\n",
-       "  'insta_score': 0.153,\n",
-       "  'expected_tricks_sd': 10.1,\n",
-       "  'p_make_contract': 0.2},\n",
+       "[{'card': 'SA',\n",
+       "  'insta_score': 0.111,\n",
+       "  'expected_tricks_dd': 9.0,\n",
+       "  'p_make_contract': 0.7,\n",
+       "  'expected_score_dd': 86},\n",
+       " {'card': 'DA',\n",
+       "  'insta_score': 0.563,\n",
+       "  'expected_tricks_dd': 9.15,\n",
+       "  'p_make_contract': 0.7,\n",
+       "  'expected_score_dd': 98},\n",
        " {'card': 'Cx',\n",
-       "  'insta_score': 0.162,\n",
-       "  'expected_tricks_sd': 10.2,\n",
-       "  'p_make_contract': 0.2},\n",
-       " {'card': 'Hx',\n",
-       "  'insta_score': 0.124,\n",
-       "  'expected_tricks_sd': 10.5,\n",
-       "  'p_make_contract': 0.1},\n",
-       " {'card': 'Sx',\n",
-       "  'insta_score': 0.215,\n",
-       "  'expected_tricks_sd': 11.0,\n",
-       "  'p_make_contract': 0.0}]"
+       "  'insta_score': 0.195,\n",
+       "  'expected_tricks_dd': 9.35,\n",
+       "  'p_make_contract': 0.55,\n",
+       "  'expected_score_dd': 207}]"
       ]
      },
      "execution_count": 5,
@@ -183,16 +193,26 @@
     {
      "data": {
       "text/plain": [
-       "['AT8xx.Tx.Ax.8xxx x.KJ98xx.KJx.Txx 9xx.xxx.QT8xx.AJ KQJx.AQ.9xx.KQ9x 0.68581',\n",
-       " 'AT8xx.Tx.Ax.8xxx J9x.QJ8xxx.9.KJx Qxx.9x.KT8xx.QTx Kx.AKx.QJxxx.A9x 0.68210',\n",
-       " 'AT8xx.Tx.Ax.8xxx x.KQJ98xxx.8.Q9x 9xxx.x.KQTxx.KJx KQJ.Ax.J9xxx.ATx 0.67324',\n",
-       " 'AT8xx.Tx.Ax.8xxx KQx.QJxxxxx.T.Tx xx.98.QJ8xx.KJxx J9x.AK.K9xxx.AQ9 0.66772',\n",
-       " 'AT8xx.Tx.Ax.8xxx x.KQ98xxx.QJx.9x 9x.x.KTxxx.AQTxx KQJxx.AJx.98x.KJ 0.66607',\n",
-       " 'AT8xx.Tx.Ax.8xxx J.Q98xxxx.Tx.KQT Q9xx.Kx.K98xx.9x Kxx.AJ.QJxx.AJxx 0.66602',\n",
-       " 'AT8xx.Tx.Ax.8xxx Qx.KJ98xxxx.Q.Tx KJ9x..KT98xx.Qxx xx.AQx.Jxxx.AKJ9 0.66499',\n",
-       " 'AT8xx.Tx.Ax.8xxx xx.AQ98xxx.8x.Qx Qxx.KJ.K9xxx.T9x KJ9.xx.QJTx.AKJx 0.66436',\n",
-       " 'AT8xx.Tx.Ax.8xxx K.K8xxxxx.xx.Q9x 9xxx.9.KQJT98.KT QJx.AQJ.xxx.AJxx 0.66378',\n",
-       " 'AT8xx.Tx.Ax.8xxx Q9.K98xxxx.Jx.Qx Jx.AJ.Q8xxx.K9xx Kxxx.Qx.KT9x.AJT 0.66352']"
+       "['AT8xx.Tx.Ax.8xxx J9.KJxxxx.Q9x.Q9 Kxxx.9.KJTxx.JTx Qx.AQ8x.8xx.AKxx 0.63623',\n",
+       " 'AT8xx.Tx.Ax.8xxx xx.AQJ9xxx.9x.Q9 QJ9x..KJT8xx.JTx Kx.K8xx.Qxx.AKxx 0.63184',\n",
+       " 'AT8xx.Tx.Ax.8xxx 9x.AJ8xxx.Qx.QTx Jxxx..K98xxx.KJx KQ.KQ9xx.JTx.A9x 0.62891',\n",
+       " 'AT8xx.Tx.Ax.8xxx KJ.QJ9xxxx.xx.KT Q9xx..KQ9xx.9xxx xx.AK8x.JT8x.AQJ 0.62598',\n",
+       " 'AT8xx.Tx.Ax.8xxx xx.AJ98xx.Txx.Qx KJ9x.x.KQJ9x.T9x Qx.KQxx.8xx.AKJx 0.55908',\n",
+       " 'AT8xx.Tx.Ax.8xxx 9x.QJ9xxx.xx.KJx KJxx.x.KJ98x.QTx Qx.AK8x.QTxx.A9x 0.55713',\n",
+       " 'AT8xx.Tx.Ax.8xxx Jx.AQ98xx.8x.Q9x KQ9.x.QTxxx.JTxx xxx.KJxx.KJ9x.AK 0.55518',\n",
+       " 'AT8xx.Tx.Ax.8xxx Q9x.QJ98xx.Kx.Jx KJx.x.QT9xx.QTxx xx.AKxx.J8xx.AK9 0.55420',\n",
+       " 'AT8xx.Tx.Ax.8xxx xx.AQ8xxx.9x.QT9 KJ9x.J.KJT8xx.xx Qx.K9xx.Qxx.AKJx 0.54736',\n",
+       " 'AT8xx.Tx.Ax.8xxx Q.Q9xxxx.J98x.KT xx.8x.KQxxx.A9xx KJ9xx.AKJ.Tx.QJx 0.54688',\n",
+       " 'AT8xx.Tx.Ax.8xxx x.AJ98xx.Txx.J9x KJ.Kxx.KJ98x.Txx Q9xxx.Qx.Qxx.AKQ 0.54297',\n",
+       " 'AT8xx.Tx.Ax.8xxx xx.Q98xxx.Jx.Axx KJxx.x.K9xxx.QJT Q9.AKJx.QT8x.K9x 0.54053',\n",
+       " 'AT8xx.Tx.Ax.8xxx 9.QJ98xx.Txx.K9x Qxxx.x.KQ8xx.QJx KJx.AKxx.J9x.ATx 0.53760',\n",
+       " 'AT8xx.Tx.Ax.8xxx Q.J8xxxxx.xx.KTx KJxx..QJ8xx.QJ9x 9xx.AKQ9.KT9x.Ax 0.53662',\n",
+       " 'AT8xx.Tx.Ax.8xxx 9x.AQ98xx.Jx.9xx Qxxx.x.Q8xxx.AQT KJ.KJxx.KT9x.KJx 0.53564',\n",
+       " 'AT8xx.Tx.Ax.8xxx xx.AK98xx.8xx.Tx KQJ9.x.QJT9x.9xx xx.QJxx.Kxx.AKQJ 0.53320',\n",
+       " 'AT8xx.Tx.Ax.8xxx x.J98xxx.98x.AQJ xx.Kxx.KQJxx.Txx KQJ9x.AQ.Txx.K9x 0.52979',\n",
+       " 'AT8xx.Tx.Ax.8xxx Jx.QJ8xx.Tx.ATxx K9xx.xx.KQ9xxx.J Qx.AK9x.J8x.KQ9x 0.52930',\n",
+       " 'AT8xx.Tx.Ax.8xxx x.AJ8xxx.Jxx.J9x Jxx.9.Q98xx.AKTx KQ9x.KQxx.KTx.Qx 0.52783',\n",
+       " 'AT8xx.Tx.Ax.8xxx J.KQJ8xx.xxx.9xx 9xx.x.KQ98x.KJTx KQxx.A9xx.JTx.AQ 0.52734']"
       ]
      },
      "execution_count": 6,
@@ -210,7 +230,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -224,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
