--- a/UCBC 2024/Simulations/OpeningLead6H.ipynb
+++ b/UCBC 2024/Simulations/OpeningLead6H.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c3397678",
    "metadata": {},
    "outputs": [
@@ -89,9 +89,11 @@
     "# the auction goes:\n",
     "auction = [\"PAD_START\", \"PAD_START\", \"1C\", \"PASS\", \"1H\", \"PASS\", \"3S\", \"PASS\", \"4D\", \"PASS\", \"4H\", \"PASS\", \"4N\", \"PASS\", \"5H\", \"PASS\", \"6H\", \"PASS\", \"PASS\", \"PASS\"]\n",
     "\n",
-    "# what to lead?\n",
+    "from ddsolver import ddsolver\n",
+    "dds = ddsolver.DDSolver()\n",
     "\n",
-    "lead_bot = BotLead([True, True], hand, models, sampler, seat, dealer=2, verbose=False)\n",
+    "# what to lead?\n",
+    "lead_bot = BotLead([True, True], hand, models, sampler, seat, dealer=2, ddsolver=dds, verbose=False)\n",
     "lead = lead_bot.find_opening_lead(auction)"
    ]
   },
