--- a/UCBC 2024/Simulations/bidding_info.ipynb
+++ b/UCBC 2024/Simulations/bidding_info.ipynb
@@ -9,22 +9,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:3: The name tf.disable_v2_behavior is deprecated. Please use tf.compat.v1.disable_v2_behavior instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\Thorvald.AALBORGDATA\\AppData\\Roaming\\Python\\Python312\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:98: disable_resource_variables (from tensorflow.python.ops.resource_variables_toggle) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/bidding_V2-5158000\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:12: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
+      "\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:21: The name tf.train.import_meta_graph is deprecated. Please use tf.compat.v1.train.import_meta_graph instead.\n",
+      "\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_V2-3125000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_V2-3125000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/contract-193200\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/binfo_V2-5158000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_V2-3125000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/Jack/lr3-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-32768000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lefty_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/dummy_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/righty_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/decl_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lefty_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_suit-999000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/dummy_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/righty_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/decl_suit-999000\n"
      ]
@@ -59,35 +66,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n_steps 4\n",
-      "[[[ 0.    0.   -1.25 -0.71  0.43 -0.71  1.    0.    0.    0.    0.    0.    1.    0.    1.    0.    0.    1.    0.    1.    1.    0.    1.    0.    0.    0.    0.    0.    0.    0.    2.    0.\n",
-      "    1.    0.    0.    0.    1.    1.    2.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.  ]\n",
-      "  [ 0.    0.   -1.25 -0.71  0.43 -0.71  1.    0.    0.    0.    0.    0.    1.    0.    1.    0.    0.    1.    0.    1.    1.    0.    1.    0.    0.    0.    0.    0.    0.    0.    2.    0.\n",
-      "    1.    0.    0.    0.    1.    1.    2.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "n_steps 3\n",
+      "[[[99.    1.    0.    0.   -1.25 -0.71  0.43 -0.71  1.    0.    0.    0.    0.    0.    1.    0.    1.    0.    0.    1.    0.    1.    1.    0.    1.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    2.    0.    1.    0.    0.    0.    1.    1.    2.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
       "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.\n",
+      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.\n",
       "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
       "    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.  ]\n",
-      "  [ 0.    0.   -1.25 -0.71  0.43 -0.71  1.    0.    0.    0.    0.    0.    1.    0.    1.    0.    0.    1.    0.    1.    1.    0.    1.    0.    0.    0.    0.    0.    0.    0.    2.    0.\n",
-      "    1.    0.    0.    0.    1.    1.    2.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    0.    0.    0.    0.    0.    0.  ]\n",
+      "  [99.    1.    0.    0.   -1.25 -0.71  0.43 -0.71  1.    0.    0.    0.    0.    0.    1.    0.    1.    0.    0.    1.    0.    1.    1.    0.    1.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    2.    0.    1.    0.    0.    0.    1.    1.    2.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
       "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
       "    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.  ]\n",
-      "  [ 0.    0.   -1.25 -0.71  0.43 -0.71  1.    0.    0.    0.    0.    0.    1.    0.    1.    0.    0.    1.    0.    1.    1.    0.    1.    0.    0.    0.    0.    0.    0.    0.    2.    0.\n",
-      "    1.    0.    0.    0.    1.    1.    2.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    0.    0.    0.    0.    0.    0.  ]\n",
+      "  [99.    1.    0.    0.   -1.25 -0.71  0.43 -0.71  1.    0.    0.    0.    0.    0.    1.    0.    1.    0.    0.    1.    0.    1.    1.    0.    1.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    2.    0.    1.    0.    0.    0.    1.    1.    2.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
       "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.  ]]]\n"
+      "    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    0.    0.    0.    0.    0.    0.  ]]]\n"
      ]
     }
    ],
@@ -111,7 +111,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c_hcp:[[10.18 12.39 11.46]]\n"
+      "c_hcp:[[11.61 10.57 12.19]]\n"
      ]
     }
    ],
@@ -152,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4
  },
