--- a/src/examples/Bidding.ipynb
+++ b/src/examples/Bidding.ipynb
@@ -42,12 +42,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\src\\nn\\bidderv2.py:3: The name tf.disable_v2_behavior is deprecated. Please use tf.compat.v1.disable_v2_behavior instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\ProgramData\\miniconda3\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:98: disable_resource_variables (from tensorflow.python.ops.resource_variables_toggle) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
-      "INFO:tensorflow:Restoring parameters from ..\\models/GIB/bidding_V2-3130000\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\src\\nn\\bidderv2.py:12: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
+      "\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\src\\nn\\bidderv2.py:21: The name tf.train.import_meta_graph is deprecated. Please use tf.compat.v1.train.import_meta_graph instead.\n",
+      "\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/GIB/2024-07-06_bidding_V2-3114000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/GIB/2024-07-06_bidding_V2-3114000\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/contract/contract-193200\n",
-      "INFO:tensorflow:Restoring parameters from ..\\models/GIB/binfo_V2-3130000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/GIB/binfo_V2-1420000\n",
       "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/lead_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/lead_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/lr3_model/lr3-1000000\n",
@@ -64,8 +71,8 @@
     }
    ],
    "source": [
-    "models = Models.from_conf(conf.load('./config/default.conf'),'..')   # loading neural networks\n",
-    "sampler = Sample.from_conf(conf.load('./config/default.conf'))  # Load sampling strategies"
+    "models = Models.from_conf(conf.load('./config/default_tf1x.conf'),'..')   # loading neural networks\n",
+    "sampler = Sample.from_conf(conf.load('./config/default_tf1x.conf'))  # Load sampling strategies"
    ]
   },
   {
@@ -86,23 +93,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loaded lib dds.dll\n"
+      "Loaded lib dds.dll\n",
+      "DDSolver being loaded - dds mode 1\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "[{'call': '4H',\n",
-       "  'insta_score': 0.497,\n",
-       "  'expected_score': 284,\n",
-       "  'expected_tricks': 10.3,\n",
-       "  'adjustment': 25,\n",
+       "  'insta_score': 0.474,\n",
+       "  'adjustment': 24,\n",
+       "  'expected_score': 220,\n",
+       "  'expected_tricks': 10.1,\n",
        "  'alert': 'False'},\n",
        " {'call': 'PASS',\n",
-       "  'insta_score': 0.498,\n",
-       "  'expected_score': 82,\n",
-       "  'expected_tricks': 9.0,\n",
-       "  'adjustment': 25,\n",
+       "  'insta_score': 0.515,\n",
+       "  'adjustment': 26,\n",
+       "  'expected_score': 83,\n",
+       "  'expected_tricks': 8.9,\n",
        "  'alert': 'False'}]"
       ]
      },
@@ -115,12 +123,15 @@
     "\n",
     "vuln_ns, vuln_ew = False, False\n",
     "\n",
+    "from ddsolver import ddsolver\n",
+    "dds = ddsolver.DDSolver()\n",
+    "\n",
     "# you sit West and hold:\n",
     "hand = '6.AKJT82.762.K63'\n",
     "\n",
     "# the auction goes:\n",
     "auction = ['1D', '3S']\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, seat=2, dealer=0, verbose=False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, seat=2, dealer=0, ddsolver=dds, verbose=False)\n",
     "\n",
     "bid = bot_bid.bid(auction)\n",
     "bid.to_dict()['candidates']\n",
@@ -137,12 +148,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': 'PASS',\n",
-       "  'insta_score': 0.981,\n",
-       "  'expected_score': 160,\n",
-       "  'expected_tricks': 10.2,\n",
-       "  'adjustment': 0,\n",
-       "  'alert': 'False'}]"
+       "[{'call': 'PASS', 'insta_score': 0.941, 'alert': 'False'}]"
       ]
      },
      "execution_count": 4,
@@ -189,26 +195,26 @@
     {
      "data": {
       "text/plain": [
-       "['A8x.Q9x.KQT9x.Jx KJT9xxx.xxx..T9x x.AKJT8x.xxx.Kxx Qx.x.AJ8xx.AQ8xx 0.69102',\n",
-       " 'x.Qx.AQJ98x.QJTx KQJ8xxx.9.x.A98x x.AKJT8x.xxx.Kxx AT9x.xxxx.KTx.xx 0.67535',\n",
-       " 'Ax.9xx.KT9x.A98x KT8xxxx.x.J8x.Qx x.AKJT8x.xxx.Kxx QJ9.Qxx.AQx.JTxx 0.67421',\n",
-       " 'x.xx.KQJT8x.AJTx KQT9xxx.x.A.Q8xx x.AKJT8x.xxx.Kxx AJ8x.Q9xx.9xx.9x 0.65984',\n",
-       " 'Tx.9x.KQJT98x.AJ AK98xxx.Qx..QTxx x.AKJT8x.xxx.Kxx QJx.xxx.Axx.98xx 0.64260',\n",
-       " 'A9x.xxx.KJxx.A8x KJT8xxx.xx.Tx.Tx x.AKJT8x.xxx.Kxx Qx.Q9.AQ98.QJ9xx 0.62197',\n",
-       " 'Axx.Qx.AK98x.98x KJ98xxx.9.Txx.Jx x.AKJT8x.xxx.Kxx QT.xxxx.QJ.AQTxx 0.61275',\n",
-       " 'AQx.xx.KQTxx.Q9x KJT8xxx.9xx.9.Jx x.AKJT8x.xxx.Kxx 9x.Qx.AJ8x.AT8xx 0.60011',\n",
-       " 'JT.xx.AKQ98xx.J8 KQ9xxxx.xx..AQxx x.AKJT8x.xxx.Kxx A8x.Q9x.JTx.T9xx 0.59392',\n",
-       " 'K9x.xx.KQ9x.AJxx QJT8xxx.Qx.JT.8x x.AKJT8x.xxx.Kxx Ax.9xx.A8xx.QT9x 0.59276',\n",
-       " 'Qx.Qxx.AKJTx.QT8 AT8xxxx.9x.9x.J9 x.AKJT8x.xxx.Kxx KJ9.xx.Q8x.Axxxx 0.59097',\n",
-       " '9.Qxxx.KQJx.A98x AT8xxxx.x.A.QJTx x.AKJT8x.xxx.Kxx KQJx.9x.T98xx.xx 0.58950',\n",
-       " 'AQ.xx.KQ98xx.A8x K9xxxxx.Q.JTx.xx x.AKJT8x.xxx.Kxx JT8.9xxx.A.QJT9x 0.58702',\n",
-       " 'Kxx.9x.AT98xx.AT QJT8xxx.xxx..J9x x.AKJT8x.xxx.Kxx A9.Qx.KQJx.Q8xxx 0.58272',\n",
-       " 'Kxx.9xx.AKT8x.Qx QT98xxx.Q.9xx.T8 x.AKJT8x.xxx.Kxx AJ.xxx.QJ.AJ9xxx 0.57936',\n",
-       " 'A8.xxxx.AKJ8x.Qx KJT9xxx.x.9x.8xx x.AKJT8x.xxx.Kxx Qxx.Q9.QTx.AJT9x 0.56894',\n",
-       " 'QJx.xxx.AJ8xx.A8 AT9xxxx.x.T9.9xx x.AKJT8x.xxx.Kxx K8.Q9x.KQx.QJTxx 0.56125',\n",
-       " 'K.Qxx.AQJT8x.J8x AQJ8xxx.x.x.AT9x x.AKJT8x.xxx.Kxx T9xx.9xx.K9x.Qxx 0.56068',\n",
-       " 'AK.xxx.KJ8xx.Q98 QJT98xx.9.T9.Jxx x.AKJT8x.xxx.Kxx xxx.Qxx.AQx.ATxx 0.56041',\n",
-       " 'Jx.xxx.AKT9xx.AQ QT98xxx.x.J.Jxxx x.AKJT8x.xxx.Kxx AKx.Q9x.Q8x.T98x 0.56017']"
+       "['J.Q9xx.KQJ8xx.Qx KT8xxxx.x.x.JT9x x.AKJT8x.xxx.Kxx AQ9x.xx.AT9.A8xx 0.77734',\n",
+       " 'x.9xxxx.AKQJTx.9 QT98xxx.x.9x.QJx x.AKJT8x.xxx.Kxx AKJx.Q.8x.AT8xxx 0.76221',\n",
+       " 'Q.Qxxx.KQJT9xx.Q AJT8xxx.9.x.8xxx x.AKJT8x.xxx.Kxx K9xx.xx.A8.AJT9x 0.71338',\n",
+       " 'Jx.Qxxx.AKT9xx.Q QT98xxx.x.J.Jxxx x.AKJT8x.xxx.Kxx AKx.9x.Q8x.AT98x 0.69434',\n",
+       " 'Q.Qxxx.AQTxxx.8x KJT8xxx.x.KJ9.J9 x.AKJT8x.xxx.Kxx A9xx.9x.8.AQTxxx 0.69287',\n",
+       " 'x.Q9xx.AKJT9x.QT KJ98xxx.x.x.J9xx x.AKJT8x.xxx.Kxx AQTx.xx.Q8x.A8xx 0.68408',\n",
+       " 'A.Qxx.KQT8xx.xxx KQ9xxxx.9x.J9.98 x.AKJT8x.xxx.Kxx JT8x.xx.Ax.AQJTx 0.68311',\n",
+       " 'x.Qxxx.AKQ98x.Jx QJT9xxx.9.Tx.Qxx x.AKJT8x.xxx.Kxx AK8x.xx.Jx.AT98x 0.67969',\n",
+       " 'Q.Qxx.AK98xx.9xx AJ98xxx.x.Qx.T8x x.AKJT8x.xxx.Kxx KTxx.9xx.JT.AQJx 0.67578',\n",
+       " '9.Qxx.AQ98xx.QJ8 QJ8xxxx.x.KTx.xx x.AKJT8x.xxx.Kxx AKTx.9xx.J.AT9xx 0.67090',\n",
+       " '9.Q9xx.KJT98x.Ax QJT8xxx.xx.A.98x x.AKJT8x.xxx.Kxx AKxx.x.Qxx.QJTxx 0.66748',\n",
+       " 'x.Q9xx.A98xxx.A8 KQT98xx.x.J.JT9x x.AKJT8x.xxx.Kxx AJxx.xx.KQT.Qxxx 0.66309',\n",
+       " 'Q.Qxx.AQJ98x.T8x KJT98xx.9x.K.xxx x.AKJT8x.xxx.Kxx Axxx.xx.Txx.AQJ9 0.65625',\n",
+       " '.xxxx.KQJ98x.A8x QT8xxxx..AT.J9xx x.AKJT8x.xxx.Kxx AKJ9x.Q9x.xx.QTx 0.64941',\n",
+       " 'x.Qxx.KQ8xx.AT9x QJT98xx.9x.J.Jxx x.AKJT8x.xxx.Kxx AKxx.xx.AT9x.Q8x 0.64502',\n",
+       " 'Kx.Qxxx.QT98x.AT JT98xxx.9.A.Q8xx x.AKJT8x.xxx.Kxx AQx.xx.KJxx.J9xx 0.64307',\n",
+       " 'K.9x.KJT98x.A98x QJ8xxxx.Qx.x.Txx x.AKJT8x.xxx.Kxx AT9x.xxx.AQx.QJx 0.64111',\n",
+       " 'T.9xx.AK98xx.A8x QJ98xxx.x.J.QJxx x.AKJT8x.xxx.Kxx AKxx.Qxx.QTx.T9x 0.64014',\n",
+       " 'A8x.Q9x.KQ98xx.x KJT9xxx.xxx..T9x x.AKJT8x.xxx.Kxx Qx.x.AJTx.AQJ8xx 0.63916',\n",
+       " '.Q9xx.KJ98xx.ATx AJT8xxx.xx.x.xxx x.AKJT8x.xxx.Kxx KQ9xx.x.AQT.QJ98 0.63818']"
       ]
      },
      "execution_count": 5,
@@ -240,27 +246,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Good quality: True\n",
-      "x.AKJT8x.xxx.Kxx K8x.Qxx.AKQ8.AQx QJxxx.xxx.Tx.9xx AT9x.9.J9xx.JT8x\n",
-      "x.AKJT8x.xxx.Kxx AK9.Qxx.AKJx.Axx QT8xx.9.8xx.98xx Jxxx.xxx.QT9.QJT\n",
-      "x.AKJT8x.xxx.Kxx AK.Qxx.AK9x.Axxx QJ8xxx.9x.Tx.JT8 T9xx.xx.QJ8x.Q9x\n",
-      "x.AKJT8x.xxx.Kxx Ax.Q9x.AKTx.AQJ8 QT98x..J98x.T9xx KJxxx.xxxx.Qx.xx\n",
-      "x.AKJT8x.xxx.Kxx KQx.Q9x.AKQ8x.AT JT8xx.x.xx.J98xx A9xx.xxx.JT9.Qxx\n",
-      "x.AKJT8x.xxx.Kxx AKQ.Qxx.AKQ98.Tx J98xx.x.Jxx.J98x Txxx.9xx.Tx.AQxx\n",
-      "x.AKJT8x.xxx.Kxx AQx.xxx.AKQJx.A9 KT98x.9.Tx.Jxxxx Jxxx.Qxx.98x.QT8\n",
+      "Good quality: 0.998\n",
+      "x.AKJT8x.xxx.Kxx AKQ.Qx.AQJ9.Q8xx T8xxx..KT8xxx.JT J9xx.9xxxx..A9xx\n",
+      "x.AKJT8x.xxx.Kxx KQ8.Q9.AKQx.AJTx JTxxx.xx.8xx.Q8x A9xx.xxx.JT9.9xx\n",
+      "x.AKJT8x.xxx.Kxx ATx.Q9x.AKx.AQJx 98xxxx..QJx.T9xx KQJ.xxxx.T98x.8x\n",
+      "x.AKJT8x.xxx.Kxx AKQ.Qxx.AKxx.QTx 98xxx.9x.98.A8xx JTxx.xx.QJTx.J9x\n",
+      "x.AKJT8x.xxx.Kxx AJx.Q9x.AKxx.AQx QT9xx.xx.x.JT8xx K8xx.xx.QJT98.9x\n",
+      "x.AKJT8x.xxx.Kxx KQx.Qx.AKQ8x.ATx T8xx.9.9x.QJ98xx AJ9xx.xxxx.JTx.x\n",
+      "x.AKJT8x.xxx.Kxx AK8.9xx.AKQ9.Axx 9xxxx.x.T8x.T8xx QJTx.Qxx.Jxx.QJ9\n",
       "x.AKJT8x.xxx.Kxx AKx.Q9.AKT9.A9xx Q8xxx.xx.8x.JT8x JT9x.xxx.QJxx.Qx\n",
-      "x.AKJT8x.xxx.Kxx AQx.9x.AKQ98.AJx J8xxx.xx.x.QT98x KT9x.Qxx.JTxx.xx\n",
-      "x.AKJT8x.xxx.Kxx KQx.Qx.AKQ9x.AJx JT8xx.9xxx.8.Q8x A9xx.x.JTxx.T9xx\n",
-      "x.AKJT8x.xxx.Kxx Kxx.Qx.AKQx.AQTx QJT9x.9xxx.8.J8x A8xx.x.JT9xx.9xx\n",
-      "x.AKJT8x.xxx.Kxx AK8.Qx.AKJ.AT8xx Q9xxx.xx.Txx.J9x JTxx.9xx.Q98x.Qx\n",
-      "x.AKJT8x.xxx.Kxx AKQ.Qx.AQJ9.Q8xx T8xxx.x.K8xxx.JT J9xx.9xxx.T.A9xx\n",
-      "x.AKJT8x.xxx.Kxx AKx.Qx.KJ8.AQJ8x T9xxxx.x.ATx.9xx QJ8.9xxx.Q9xx.Tx\n",
-      "x.AKJT8x.xxx.Kxx AKx.Qx.AT9.AQJTx QT8xx.9xx.Qxx.xx J9xx.xx.KJ8x.98x\n",
-      "x.AKJT8x.xxx.Kxx AQx.xx.AKQTx.AQT 9xxx.x.Jxx.Jxxxx KJT8x.Q9xx.98.98\n",
-      "x.AKJT8x.xxx.Kxx AQx.Q9.AKQJx.ATx T98xx.xxx.T9x.8x KJxx.xx.8x.QJ9xx\n",
-      "x.AKJT8x.xxx.Kxx AK.xx.AKT8x.AQxx JT8xxx.Qx.9x.Jxx Q9xx.9xx.QJx.T98\n",
-      "x.AKJT8x.xxx.Kxx AKQ.Qxx.AKxx.QTx 98xxx.9x.98.AJ8x JTxx.xx.QJTx.9xx\n",
-      "x.AKJT8x.xxx.Kxx Axx.Qxx.AKQT.AQT K98xx.x.J9xx.9xx QJTx.9xx.8x.J8xx\n"
+      "x.AKJT8x.xxx.Kxx AK8.xx.AKJ8.AJTx T9xxx.xx.Q9x.Q9x QJxx.Q9x.Txx.8xx\n",
+      "x.AKJT8x.xxx.Kxx AK.Q9x.AK9x.Axxx QJ8xxx.x.Tx.JT8x T9xx.xxx.QJ8x.Q9\n",
+      "x.AKJT8x.xxx.Kxx KJ.Qxx.AKx.AQJ9x QT9xxx.x.JTxx.xx A8xx.9xx.Q98.T8x\n",
+      "x.AKJT8x.xxx.Kxx K8x.Qx.AKQT8.AQx QJxxx.xxx.9x.9xx AT9x.9x.Jxx.JT8x\n",
+      "x.AKJT8x.xxx.Kxx A8x.Q9x.AKQx.AJT JT9xx.xx.8x.Q98x KQxx.xx.JT9x.xxx\n",
+      "x.AKJT8x.xxx.Kxx KQx.Qx.AKQ9x.AJx JT8xx.9x.T8x.Q8x A9xx.xxx.Jx.T9xx\n",
+      "x.AKJT8x.xxx.Kxx AQ8.xx.AKQ9x.AJx JTxxx.x.Jx.Q98xx K9xx.Q9xx.T8x.Tx\n",
+      "x.AKJT8x.xxx.Kxx AQx.xxx.AKQJx.A9 KT98..T9x.J8xxxx Jxxxx.Q9xx.8x.QT\n",
+      "x.AKJT8x.xxx.Kxx AKx.Qx.KQx.AQ8xx JT98x.9x.T98x.Jx Qxxx.xxx.AJx.T9x\n",
+      "x.AKJT8x.xxx.Kxx AKx.Qx.KQx.AQTxx QJT98x.x.Txx.9xx xxx.9xxx.AJ98.J8\n",
+      "x.AKJT8x.xxx.Kxx AKx.xx.AKQ9x.Axx JT9xx..8xx.QJ9xx Q8xx.Q9xxx.JT.T8\n",
+      "x.AKJT8x.xxx.Kxx AKJ.9x.AKQ8x.A98 9xxxx.xx.Tx.QJxx QT8x.Qxx.J9x.Txx\n",
+      "x.AKJT8x.xxx.Kxx AK9.9x.AKQJT.A9x Q8xx.x.98xx.T8xx JTxxx.Qxxx.x.QJx\n",
+      "x.AKJT8x.xxx.Kxx AKx.Qxx.AK.A98xx T9xxx.9xx.T8xx.x QJ8x.x.QJ9x.QJTx\n",
+      "x.AKJT8x.xxx.Kxx AKQ.9x.AKT.AJT8x 8xxxx.x.J9xx.9xx JT9x.Qxxx.Q8x.Qx\n",
+      "x.AKJT8x.xxx.Kxx KT9.Q9.AKQ9x.AQx QJ8xxxx.x.xx.JT8 Ax.xxxx.JT8.9xxx\n",
+      "x.AKJT8x.xxx.Kxx AKx.9x.AKQTx.A98 QJ98xxx.x.J8.Txx Tx.Qxxx.9xx.QJxx\n",
+      "x.AKJT8x.xxx.Kxx KJ.xx.AKQx.AQJxx Q9xxxx.9.98xx.8x AT8x.Qxxx.JT.T9x\n",
+      "x.AKJT8x.xxx.Kxx AK.9x.AKTx.AQTxx JT98xxx.x.Q9.98x Qxx.Qxxx.J8xx.Jx\n"
      ]
     }
    ],
@@ -300,10 +313,10 @@
     {
      "data": {
       "text/plain": [
-       "['A87.AT52.Q.T8543',\n",
-       " 'QT9.J73.AT985.J7',\n",
-       " '6532.84.KJ642.K9',\n",
-       " 'KJ4.KQ96.73.AQ62']"
+       "['J54.K3.KQT92.985',\n",
+       " 'T9.J98.A8543.T76',\n",
+       " 'AQ73.6542.7.QJ42',\n",
+       " 'K862.AQT7.J6.AK3']"
       ]
      },
      "execution_count": 7,
@@ -323,7 +336,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bidder_bots = [BotBid([False, False], hand, models, sampler,i, 0,False) for i, hand in enumerate(hands)]"
+    "bidder_bots = [BotBid([False, False], hand, models, sampler,i, 0, dds, False) for i, hand in enumerate(hands)]"
    ]
   },
   {
@@ -332,13 +345,6 @@
    "id": "7d77351a",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "expected_score 193.0\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -365,7 +371,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -379,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
