--- a/src/examples/OpeningLead.ipynb
+++ b/src/examples/OpeningLead.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "fe373c76",
    "metadata": {},
    "outputs": [
@@ -58,13 +58,13 @@
     }
    ],
    "source": [
-    "models = Models.from_conf(conf.load('./config/default.conf'),'..')   # loading neural networks\n",
-    "sampler = Sample.from_conf(conf.load('./config/default.conf'), False)  # Load sampling strategies"
+    "models = Models.from_conf(conf.load('./config/default_tf1x.conf'),'..')   # loading neural networks\n",
+    "sampler = Sample.from_conf(conf.load('./config/default_tf1x.conf'), False)  # Load sampling strategies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c3397678",
    "metadata": {},
    "outputs": [
@@ -83,9 +83,11 @@
     "# the auction goes:\n",
     "auction = [\"1C\",\"1D\",\"1S\",\"2D\",\"X\",\"PASS\",\"2S\",\"PASS\",\"3C\",\"PASS\",\"3N\",\"PASS\",\"4S\",'PASS', 'PASS', 'PASS']\n",
     "\n",
-    "# what to lead?\n",
+    "from ddsolver import ddsolver\n",
+    "dds = ddsolver.DDSolver()\n",
     "\n",
-    "lead_bot = BotLead([True, True], hand, models, sampler, 0, 0, False)\n",
+    "# what to lead?\n",
+    "lead_bot = BotLead([True, True], hand, models, sampler, 0, 0, dds, False)\n",
     "lead = lead_bot.find_opening_lead(auction)"
    ]
   },
