--- a/src/examples/bidding_info.ipynb
+++ b/src/examples/bidding_info.ipynb
@@ -9,12 +9,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\src\\nn\\bidderv2.py:3: The name tf.disable_v2_behavior is deprecated. Please use tf.compat.v1.disable_v2_behavior instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\ProgramData\\miniconda3\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:98: disable_resource_variables (from tensorflow.python.ops.resource_variables_toggle) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
-      "INFO:tensorflow:Restoring parameters from ..\\models/GIB/bidding_V2-3130000\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\src\\nn\\bidderv2.py:12: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
+      "\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\src\\nn\\bidderv2.py:21: The name tf.train.import_meta_graph is deprecated. Please use tf.compat.v1.train.import_meta_graph instead.\n",
+      "\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/GIB/2024-07-06_bidding_V2-3114000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/GIB/2024-07-06_bidding_V2-3114000\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/contract/contract-193200\n",
-      "INFO:tensorflow:Restoring parameters from ..\\models/GIB/binfo_V2-3130000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/GIB/binfo_V2-1420000\n",
       "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/lead_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/lead_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/lr3_model/lr3-1000000\n",
@@ -47,8 +54,8 @@
     "np.set_printoptions(precision=2, suppress=True, linewidth=200)\n",
     "\n",
     "\n",
-    "models = Models.from_conf(conf.load('./config/default.conf'),'..')   # loading neural networks\n",
-    "sampler = Sample.from_conf(conf.load('./config/default.conf'))  # Load sampling strategies"
+    "models = Models.from_conf(conf.load('./config/default_tf1x.conf'),'..')   # loading neural networks\n",
+    "sampler = Sample.from_conf(conf.load('./config/default_tf1x.conf'))  # Load sampling strategies"
    ]
   },
   {
@@ -74,8 +81,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c_hcp:[[7.17 6.85 8.02]]\n",
-      "c_shp:[[3.5  3.75 4.19 1.52 3.41 3.93 4.15 1.44 1.54 1.72 2.15 7.82]]\n"
+      "c_hcp:[[6.39 7.7  7.43]]\n",
+      "c_shp:[[3.38 3.95 3.65 2.02 3.44 4.03 3.74 1.78 1.47 1.99 1.92 7.74]]\n"
      ]
     }
    ],
@@ -106,7 +113,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 4.51 20.51  8.14]]\n"
+      "[[ 4.45 22.22  7.34]]\n"
      ]
     }
    ],
@@ -134,14 +141,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[19.12 13.09  3.84]\n",
-      " [21.61 12.98  2.25]]\n"
+      "[[20.93 11.66  2.67]]\n"
      ]
     }
    ],
    "source": [
     "auction = ['PAD_START', '2C','4N','PASS']\n",
-    "n_steps = binary.calculate_step_bidding_info(auction, models)\n",
+    "n_steps = binary.calculate_step_bidding_info(auction)\n",
     "n_samples = 10\n",
     "nesw_i = 0\n",
     "vuln = [True, False]\n",
@@ -169,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4
  },
