--- a/UCBC 2024/Simulations/Bidding1NOvercall.ipynb
+++ b/UCBC 2024/Simulations/Bidding1NOvercall.ipynb
@@ -20,22 +20,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:3: The name tf.disable_v2_behavior is deprecated. Please use tf.compat.v1.disable_v2_behavior instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\ProgramData\\miniconda3\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:98: disable_resource_variables (from tensorflow.python.ops.resource_variables_toggle) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/bidding_V2-5158000\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:12: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
+      "\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:21: The name tf.train.import_meta_graph is deprecated. Please use tf.compat.v1.train.import_meta_graph instead.\n",
+      "\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_V2-3125000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_V2-3125000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/contract-193200\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/binfo_V2-5158000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_V2-3125000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/Jack/lr3-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-32768000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lefty_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/dummy_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/righty_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/decl_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lefty_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_suit-999000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/dummy_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/righty_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/decl_suit-999000\n"
      ]
@@ -75,9 +82,17 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loaded lib dds.dll\n",
+      "DDSolver being loaded - dds mode 1\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[{'call': '2C', 'insta_score': 0.999}]"
+       "[{'call': '2C', 'insta_score': 0.952}]"
       ]
      },
      "execution_count": 2,
@@ -89,8 +104,11 @@
     "vuln_ns, vuln_ew = False, False\n",
     "hand = 'AQJ986.QJ952.7.8'\n",
     "\n",
+    "from ddsolver import ddsolver\n",
+    "dds = ddsolver.DDSolver()\n",
+    "\n",
     "auction = [\"PASS\", \"1N\"]\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 2, 0, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 2, 0, dds, False)\n",
     "\n",
     "bid = bot_bid.bid(auction)\n",
     "bid.to_dict()['candidates']\n",
@@ -129,17 +147,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Good quality: True\n",
-      "xxx.8xx.T8x.Axxx KTx.AKxx.AQx.KJx AQJ98x.QJ9xx.x.8 x.T.KJ9xxx.QT9xx 0.75\n",
-      "xxxx.xxx.K98x.AT Kx.A8.AJTxx.K9xx AQJ98x.QJ9xx.x.8 T.KTx.Qxx.QJxxxx 1.00\n",
-      "KTxx.Txx.Jxx.Jxx x.AK.A8xxx.KQ9xx AQJ98x.QJ9xx.x.8 xx.8xx.KQT9.ATxx 0.75\n",
-      "xxx.ATx.Jxx.xxxx KTx.xx.A98x.ATxx AQJ98x.QJ9xx.x.8 x.K8x.KQTxx.KQJ9 0.75\n",
-      "Txx.xxxx.98xx.Qx Kx.K.AKQ.AKJTxxx AQJ98x.QJ9xx.x.8 xx.AT8.JTxxx.9xx 0.75\n",
-      "xx.xx.KT8x.J9xxx Kxx.KT.AQ9x.QTxx AQJ98x.QJ9xx.x.8 Tx.A8xx.Jxxx.AKx 0.75\n",
-      "KTx.x.KQTxx.QT9x xx.KTxx.A8x.AKxx AQJ98x.QJ9xx.x.8 xx.A8x.J9xx.Jxxx 0.75\n",
-      "Kxx.Tx.T8xxx.QJx Txxx.Kxx.Qx.AKTx AQJ98x.QJ9xx.x.8 .A8x.AKJ9x.9xxxx 0.75\n",
-      "xxx.Ax.AJ9xx.J9x Kx.T.Qxxx.AKTxxx AQJ98x.QJ9xx.x.8 Tx.K8xxx.KT8.Qxx 0.75\n",
-      "Txx.KT.Axx.QT9xx Kx.Axx.8xxx.AKJx AQJ98x.QJ9xx.x.8 xx.8xx.KQJT9.xxx 1.00\n"
+      "Good quality: 0.978\n",
+      "Kx.8xx.J8xx.Kxxx xxxx.AKx.AK.QJxx AQJ98x.QJ9xx.x.8 T.Tx.QT9xxx.AT9x 1.00\n",
+      "xx.T8x.AJxxx.Axx KTx.Ax.K8x.KQ9xx AQJ98x.QJ9xx.x.8 xx.Kxx.QT9x.JTxx 1.00\n",
+      "xxx.8xx.A8xx.xxx KTxx.AKTx.9x.AJx AQJ98x.QJ9xx.x.8 .x.KQJTxx.KQT9xx 1.00\n",
+      "Tx.8x.AJxx.Jxxxx Kx.Ax.KQ8xx.AT9x AQJ98x.QJ9xx.x.8 xxx.KTxx.T9x.KQx 0.76\n",
+      "Kxx.8xx.Q98x.xxx Tx.KTx.AKTxx.AKT AQJ98x.QJ9xx.x.8 xx.Ax.Jxx.QJ9xxx 1.00\n",
+      "Tx.Axx.Jxx.QJTxx Kx.KT.AQ8x.K9xxx AQJ98x.QJ9xx.x.8 xxx.8xx.KT9xx.Ax 0.79\n",
+      "xx.Txx.Txx.AT9xx KTx.K8x.AQ8x.KQx AQJ98x.QJ9xx.x.8 xx.Ax.KJ9xx.Jxxx 1.00\n",
+      "xx.xxx.AQx.KQ9xx KTx.AK.Jxxx.AJxx AQJ98x.QJ9xx.x.8 xx.T8x.KT98x.Txx 0.85\n",
+      "Kxxx.ATx.Txx.xxx Tx.Kxx.AJxx.AQJT AQJ98x.QJ9xx.x.8 x.8x.KQ98x.K9xxx 1.00\n",
+      "Kx.8x.AJxxx.9xxx Txx.Axx.KQx.AQTx AQJ98x.QJ9xx.x.8 xx.KTx.T98x.KJxx 1.00\n"
      ]
     }
    ],
@@ -155,7 +173,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -169,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
