--- a/UCBC 2024/Simulations/Bidding4S.ipynb
+++ b/UCBC 2024/Simulations/Bidding4S.ipynb
@@ -15,17 +15,7 @@
    "execution_count": 1,
    "id": "59a5664c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "non-resource variables are not supported in the long term\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
@@ -53,8 +43,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_same-5556000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_same-5556000\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:3: The name tf.disable_v2_behavior is deprecated. Please use tf.compat.v1.disable_v2_behavior instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\ProgramData\\miniconda3\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:98: disable_resource_variables (from tensorflow.python.ops.resource_variables_toggle) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "non-resource variables are not supported in the long term\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:12: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
+      "\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:21: The name tf.train.import_meta_graph is deprecated. Please use tf.compat.v1.train.import_meta_graph instead.\n",
+      "\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_V2-3125000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_V2-3125000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/contract-193200\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_V2-3125000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/Jack/lr3-1000000\n",
@@ -62,11 +63,11 @@
       "INFO:tensorflow:Restoring parameters from ..\\Models/lefty_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/dummy_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/righty_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_nt-950000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lefty_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/dummy_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/righty_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_suit-1278000\n"
+      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_suit-999000\n"
      ]
     }
    ],
@@ -90,9 +91,17 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loaded lib dds.dll\n",
+      "DDSolver being loaded - dds mode 1\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[{'call': 'PASS', 'insta_score': 0.997}]"
+       "[{'call': 'PASS', 'insta_score': 0.998}]"
       ]
      },
      "execution_count": 3,
@@ -104,11 +113,14 @@
     "# East deals, EW vulnerable.\n",
     "vuln_ns, vuln_ew = True, True\n",
     "\n",
+    "from ddsolver import ddsolver\n",
+    "dds = ddsolver.DDSolver()\n",
+    "\n",
     "# you sit West and hold:\n",
     "hand = '7632.J964.K94.J5'\n",
     "\n",
     "auction = [\"PAD_START\", \"PAD_START\", \"PAD_START\", \"PASS\", \"1C\", \"1H\"]\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 2, 3, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 2, 3, dds, False)\n",
     "\n",
     "bid = bot_bid.bid(auction)\n",
     "bid.to_dict()['candidates']\n",
@@ -125,7 +137,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': '1S', 'insta_score': 0.975}]"
+       "[{'call': '1S', 'insta_score': 0.959}]"
       ]
      },
      "execution_count": 4,
@@ -149,12 +161,31 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': '3S', 'insta_score': 0.266, 'expected_score': 83, 'adjustment': 133},\n",
-       " {'call': '4S', 'insta_score': 0.111, 'expected_score': 77, 'adjustment': 55},\n",
-       " {'call': '2S',\n",
-       "  'insta_score': 0.472,\n",
-       "  'expected_score': -277,\n",
-       "  'adjustment': 236}]"
+       "[{'call': '2S',\n",
+       "  'insta_score': 0.284,\n",
+       "  'adjustment': 142,\n",
+       "  'expected_score': 134,\n",
+       "  'expected_tricks': 8.9},\n",
+       " {'call': '2N',\n",
+       "  'insta_score': 0.169,\n",
+       "  'adjustment': 85,\n",
+       "  'expected_score': -1,\n",
+       "  'expected_tricks': 7.8},\n",
+       " {'call': '3C',\n",
+       "  'insta_score': 0.153,\n",
+       "  'adjustment': 77,\n",
+       "  'expected_score': 70,\n",
+       "  'expected_tricks': 8.9},\n",
+       " {'call': 'PASS',\n",
+       "  'insta_score': 0.11,\n",
+       "  'adjustment': 55,\n",
+       "  'expected_score': -51,\n",
+       "  'expected_tricks': 7.2},\n",
+       " {'call': '3D',\n",
+       "  'insta_score': 0.108,\n",
+       "  'adjustment': 54,\n",
+       "  'expected_score': 70,\n",
+       "  'expected_tricks': 8.9}]"
       ]
      },
      "execution_count": 5,
@@ -172,7 +203,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -186,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
