--- a/UCBC 2024/Simulations/BiddingCrazy.ipynb
+++ b/UCBC 2024/Simulations/BiddingCrazy.ipynb
@@ -51,23 +51,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:3: The name tf.disable_v2_behavior is deprecated. Please use tf.compat.v1.disable_v2_behavior instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\ProgramData\\miniconda3\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:98: disable_resource_variables (from tensorflow.python.ops.resource_variables_toggle) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_same-5556000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_same-5556000\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:12: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
+      "\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:21: The name tf.train.import_meta_graph is deprecated. Please use tf.compat.v1.train.import_meta_graph instead.\n",
+      "\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_V2-3125000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_V2-3125000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/contract-193200\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_V2-3125000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/Jack/lr3-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-32768000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/lefty-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/dummy-920000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/righty-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/decl-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/lefty-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/dummy-920000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/righty-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/decl-1000000\n"
+      "INFO:tensorflow:Restoring parameters from ..\\Models/lefty_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/dummy_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/righty_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/lefty_suit-999000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/dummy_suit-999000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/righty_suit-999000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_suit-999000\n"
      ]
     }
    ],
@@ -99,8 +107,19 @@
    "execution_count": 3,
    "id": "fc27ca79",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loaded lib dds.dll\n",
+      "DDSolver being loaded - dds mode 1\n"
+     ]
+    }
+   ],
    "source": [
+    "from ddsolver import ddsolver\n",
+    "dds = ddsolver.DDSolver()\n",
     "\n",
     "hands = [\"AJ.KJ9.A9764.AJ8\",\"T853.AT65.Q8.T52\", \"K976.Q874.KT.K74\", \"Q42.32.J532.Q963\"]\n",
     "#hands = ['AKQJTx.AQTx.Ax.x', 'xxx.Kx.KT8x.KJxx', 'x.J98xxxx.9.QTxx', '98x..QJxxxx.A98x']"
@@ -115,7 +134,7 @@
    "source": [
     "# North is dealer\n",
     "dealer = 0\n",
-    "bidder_bots = [BotBid([False, True], hand, models, sampler, i, dealer, False) for i, hand in enumerate(hands)]"
+    "bidder_bots = [BotBid([False, True], hand, models, sampler, i, dealer, dds, False) for i, hand in enumerate(hands)]"
    ]
   },
   {
@@ -128,28 +147,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'bid': '1D', 'who': 'NN', 'candidates': [{'call': '1D', 'insta_score': 0.961}], 'hcp': [7.5, 8.1, 6.9], 'shape': [3.8, 3.2, 2.6, 3.2, 3.6, 3.2, 2.8, 3.2, 3.7, 3.2, 2.7, 3.3]}\n",
-      "{'bid': 'PASS', 'who': 'NN', 'candidates': [{'call': 'PASS', 'insta_score': 1.0}], 'hcp': [10.5, 10.0, 13.5], 'shape': [3.0, 3.2, 3.2, 3.5, 3.2, 3.3, 2.8, 3.6, 2.5, 2.6, 5.0, 2.8]}\n",
-      "{'bid': '1H', 'who': 'NN', 'candidates': [{'call': '1H', 'insta_score': 1.0}], 'hcp': [9.0, 13.2, 6.0], 'shape': [3.2, 3.3, 2.7, 3.7, 2.6, 2.7, 4.9, 2.7, 3.0, 3.2, 3.1, 3.7]}\n",
-      "{'bid': 'PASS', 'who': 'NN', 'candidates': [{'call': 'PASS', 'insta_score': 1.0}], 'hcp': [14.3, 7.4, 12.5], 'shape': [3.4, 2.8, 4.4, 2.5, 3.8, 3.1, 2.8, 3.4, 3.2, 4.8, 2.1, 2.8]}\n",
-      "{'bid': '3N', 'who': 'NN', 'candidates': [{'call': '3N', 'insta_score': 0.992}], 'hcp': [6.1, 11.0, 6.1], 'shape': [4.0, 2.5, 3.0, 3.5, 3.1, 4.6, 2.4, 2.8, 4.0, 2.6, 2.9, 3.5]}\n",
-      "{'bid': 'PASS', 'who': 'NN', 'candidates': [{'call': 'PASS', 'insta_score': 1.0}], 'hcp': [10.2, 5.3, 18.1], 'shape': [2.8, 4.4, 2.7, 3.0, 3.6, 2.4, 3.0, 3.9, 2.9, 2.1, 5.1, 2.8]}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loaded lib dds.dll\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'bid': 'PASS', 'who': 'Simulation', 'quality': 'Good', 'candidates': [{'call': 'PASS', 'insta_score': 0.143, 'expected_score': 471, 'adjustment': 7}, {'call': '4N', 'insta_score': 0.569, 'expected_score': 439, 'adjustment': 28}, {'call': '6N', 'insta_score': 0.259, 'expected_score': 437, 'adjustment': 13}], 'samples': ['AT8.KT.AQJ8x.AJ8 Jxxx.Axxx.xx.xxx K9xx.Q8xx.KT.Kxx Qx.J9x.9xxx.QT9x 0.99622 \\n 1D-P-1H-P-3N-P-4N-P-5D-P-6N-P-P-P (12, 11.4, 11.1)  \\n 1D-P-1H-P-3N-P-6N-P-P-P (12, 11.4, 11.1)  \\n 1D-P-1H-P-3N-P-P-P (12, 11.4, 11.1) ', 'Txx.AK.AQJ8x.AJx AJ8x.9xx.9xx.QT9 K9xx.Q8xx.KT.Kxx Qx.JTxx.xxx.8xxx 0.99619 \\n 1D-P-1H-P-3N-P-4N-P-5D-P-6N-P-P-P (11, 11.0, 10.9)  \\n 1D-P-1H-P-3N-P-6N-P-P-P (11, 11.0, 10.9)  \\n 1D-P-1H-P-3N-P-P-P (11, 11.0, 10.9) ', 'Ax.AJ9.AJ9xx.AJT Txx.KT.Q8xx.98xx K9xx.Q8xx.KT.Kxx QJ8x.xxxx.xx.Qxx 0.99617 \\n 1D-P-1H-P-3N-P-4N-P-5D-P-6N-P-P-P (11, 11.2, 10.9)  \\n 1D-P-1H-P-3N-P-6N-P-P-P (11, 11.2, 10.9)  \\n 1D-P-1H-P-3N-P-P-P (11, 11.2, 10.9) ', 'AQx.Kx.AJ9xx.AJx Txx.9xx.xxx.T98x K9xx.Q8xx.KT.Kxx J8x.AJTx.Q8x.Qxx 0.99611 \\n 1D-P-1H-P-3N-P-4N-P-5D-P-6N-P-P-P (12, 11.3, 10.9)  \\n 1D-P-1H-P-3N-P-6N-X-P-P-P (12, 11.3, 10.8)  \\n 1D-P-1H-P-3N-P-P-P (12, 11.3, 10.8) ', 'Ax.AKx.Q8xxx.AQx QJ8.xx.AJxx.JT9x K9xx.Q8xx.KT.Kxx Txxx.JT9x.9x.8xx 0.99606 \\n 1D-P-1H-P-3N-P-4N-P-5D-P-6N-P-P-P (11, 10.8, 10.9)  \\n 1D-P-1H-P-3N-P-6N-P-P-P (11, 10.8, 10.9)  \\n 1D-P-1H-P-3N-P-P-P (11, 10.8, 10.9) ', '8x.AKT.AQxxx.AQ9 Txx.xxx.J98x.Txx K9xx.Q8xx.KT.Kxx AQJx.J9x.xx.J8xx 0.99601 \\n 1D-P-1H-P-3N-P-4N-P-5D-P-6N-P-P-P (10, 9.5, 11.1)  \\n 1D-P-1H-P-3N-P-6N-X-P-P-P (10, 9.5, 11.1)  \\n 1D-P-1H-P-3N-P-P-P (10, 9.5, 10.8) ', 'Ax.KT9.AJ9xx.AQJ J8xx.AJxxx.x.Txx K9xx.Q8xx.KT.Kxx QTx.x.Q8xxx.98xx 0.99595 \\n 1D-P-1H-P-3N-P-4N-P-6N-P-P-P (11, 11.0, 10.6)  \\n 1D-P-1H-P-3N-P-6N-P-P-P (11, 11.0, 10.6)  \\n 1D-P-1H-P-3N-P-P-P (11, 11.0, 10.6) ', 'Tx.AK9.AQ9xx.AQx J8xx.Tx.J8xxx.8x K9xx.Q8xx.KT.Kxx AQx.Jxxx.x.JT9xx 0.99592 \\n 1D-P-1H-P-3N-P-4N-P-5D-P-6N-P-P-P (11, 9.8, 10.3)  \\n 1D-P-1H-P-3N-P-6N-P-P-P (11, 9.8, 10.3)  \\n 1D-P-1H-P-3N-P-P-P (11, 9.8, 10.4) ', 'A8.KJT.AQJxx.ATx Jx.9xx.98x.QJ9xx K9xx.Q8xx.KT.Kxx QTxxx.Axx.xxx.8x 0.99580 \\n 1D-P-1H-P-3N-P-4N-P-5D-P-6N-P-P-P (12, 11.2, 11.1)  \\n 1D-P-1H-P-3N-P-6N-P-P-P (12, 11.2, 11.1)  \\n 1D-P-1H-P-3N-P-P-P (12, 11.2, 11.1) ', 'Ax.AKJ.Jxxxx.AQ8 Qxx.T9xx.Q8x.T9x K9xx.Q8xx.KT.Kxx JT8x.xx.A9x.Jxxx 0.99575 \\n 1D-P-1H-P-3N-P-4N-P-5D-P-6N-P-P-P (10, 10.8, 10.3)  \\n 1D-P-1H-P-3N-P-6N-P-P-P (10, 10.8, 10.3)  \\n 1D-P-1H-P-3N-P-P-P (10, 10.8, 10.3) ', 'Jxx.AK.AQJ9x.A9x AT8x.J9x.8xxx.xx K9xx.Q8xx.KT.Kxx Qx.Txxx.xx.QJT8x 0.99555 \\n 1D-P-1H-P-3N-P-4N-P-5D-P-6N-P-P-P (11, 11.1, 10.5)  \\n 1D-P-1H-P-3N-P-6N-P-P-P (11, 11.1, 10.5)  \\n 1D-P-1H-P-3N-P-P-P (11, 11.1, 10.5) ', 'Ax.AKx.AQ8xx.Qxx 8xx.Txx.9xxx.JT9 K9xx.Q8xx.KT.Kxx QJTx.J9x.Jx.A8xx 0.99554 \\n 1D-P-1H-P-3N-P-4N-P-5D-P-6N-P-P-P (11, 10.7, 11.0)  \\n 1D-P-1H-P-3N-P-6N-X-P-P-P (11, 10.7, 10.9)  \\n 1D-P-1H-P-3N-P-P-P (11, 10.7, 10.8) ', 'AJx.K9x.AQ8xx.AJ 8xx.Ax.J9xx.T8xx K9xx.Q8xx.KT.Kxx QTx.JTxx.xx.Q9xx 0.99525 \\n 1D-P-1H-P-3N-P-4N-P-5D-P-6N-P-P-P (12, 11.2, 10.7)  \\n 1D-P-1H-P-3N-P-6N-P-P-P (12, 11.2, 10.7)  \\n 1D-P-1H-P-3N-P-P-P (12, 11.2, 10.7) ', 'QTx.AK.AQ98x.Axx Axx.Txxxx.xxx.xx K9xx.Q8xx.KT.Kxx J8x.J9.Jxx.QJT98 0.99508 \\n 1D-P-1H-P-3N-P-4N-P-5D-P-6N-P-P-P (12, 11.0, 11.0)  \\n 1D-P-1H-P-3N-P-6N-P-P-P (12, 11.0, 11.0)  \\n 1D-P-1H-P-3N-P-P-P (12, 11.0, 11.0) ', 'Qx.AKJ.AQ98x.QJ8 8xx.9xxx.Jxxx.Tx K9xx.Q8xx.KT.Kxx AJTx.Tx.xx.A9xxx 0.99498 \\n 1D-P-1H-P-3N-P-4N-P-6N-P-P-P (11, 10.1, 10.6)  \\n 1D-P-1H-P-3N-P-6N-X-P-P-P (11, 10.1, 10.6)  \\n 1D-P-1H-P-3N-P-P-P (11, 10.1, 10.3) ', 'Q8x.AK.AQ8xx.A9x JTx.Txx.J9xx.8xx K9xx.Q8xx.KT.Kxx Axx.J9xx.xx.QJTx 0.99495 \\n 1D-P-1H-P-3N-P-4N-P-5D-P-6N-P-P-P (12, 11.0, 10.6)  \\n 1D-P-1H-P-3N-P-6N-P-P-P (12, 11.0, 10.6)  \\n 1D-P-1H-P-3N-P-P-P (12, 11.0, 10.9) ', 'AJx.AK.AJ8xx.Q8x 8xx.JT9xx.Qxx.Jx K9xx.Q8xx.KT.Kxx QTx.xx.9xx.AT9xx 0.99494 \\n 1D-P-1H-P-3N-P-4N-P-5D-P-6N-P-P-P (12, 11.1, 10.7)  \\n 1D-P-1H-P-3N-P-6N-P-P-P (12, 11.1, 10.7)  \\n 1D-P-1H-P-3N-P-P-P (12, 11.1, 10.4) ', 'AT.Kxx.AQ8xx.AQ8 Jxxxx.x.9xx.JTxx K9xx.Q8xx.KT.Kxx Q8.AJT9x.Jxx.9xx 0.99481 \\n 1D-P-1H-P-3N-P-4N-P-5D-P-6N-P-P-P (11, 10.9, 10.7)  \\n 1D-P-1H-P-3N-P-6N-P-P-P (11, 10.9, 10.7)  \\n 1D-P-1H-P-3N-P-P-P (11, 10.9, 10.7) ', 'Ax.AJx.A8xxx.AQ8 8xx.KTx.Jxx.Txxx K9xx.Q8xx.KT.Kxx QJTx.9xx.Q9x.J9x 0.99480 \\n 1D-P-1H-P-3N-P-4N-P-5D-P-6N-P-P-P (10, 10.8, 10.6)  \\n 1D-P-1H-P-3N-P-6N-P-P-P (10, 10.8, 10.6)  \\n 1D-P-1H-P-3N-P-P-P (10, 10.8, 10.6) ', 'AJ8.Ax.AQ8xx.Axx Txx.Kxx.J9xx.QTx K9xx.Q8xx.KT.Kxx Qxx.JT9x.xx.J98x 0.99464 \\n 1D-P-1H-P-3N-P-4N-P-5D-P-6N-P-P-P (12, 11.8, 11.3)  \\n 1D-P-1H-P-3N-P-6N-P-P-P (12, 11.8, 11.2)  \\n 1D-P-1H-P-3N-P-P-P (12, 11.8, 11.3) '], 'hcp': [5.5, 18.5, 4.9], 'shape': [3.2, 3.3, 2.9, 3.6, 2.6, 2.6, 5.0, 2.8, 3.2, 3.3, 3.0, 3.6]}\n",
-      "{'bid': 'PASS', 'who': 'NN', 'candidates': [{'call': 'PASS', 'insta_score': 1.0}, {'call': 'X', 'insta_score': 0.0}], 'hcp': [18.9, 6.7, 9.5], 'shape': [3.1, 2.7, 4.7, 2.6, 3.9, 3.4, 2.5, 3.1, 3.2, 4.6, 2.2, 3.0]}\n",
-      "['1D', 'PASS', '1H', 'PASS', '3N', 'PASS', 'PASS', 'PASS']\n"
+      "{'bid': '1D', 'who': 'NN', 'quality': '1', 'candidates': [{'call': '1D', 'insta_score': 0.999}], 'hcp': [6.9, 7.8, 6.9], 'shape': [3.7, 3.2, 2.7, 3.1, 3.7, 3.2, 2.7, 3.2, 3.7, 3.2, 2.8, 3.1]}\n",
+      "{'bid': 'PASS', 'who': 'NN', 'quality': '1', 'candidates': [{'call': 'PASS', 'insta_score': 1.0}], 'hcp': [10.4, 9.6, 13.4], 'shape': [3.1, 3.2, 3.0, 3.7, 3.1, 3.2, 3.1, 3.6, 2.7, 2.8, 4.8, 2.9]}\n",
+      "{'bid': '1H', 'who': 'NN', 'quality': '1', 'candidates': [{'call': '1H', 'insta_score': 1.0}], 'hcp': [8.3, 13.2, 6.9], 'shape': [3.2, 3.3, 2.9, 3.7, 2.7, 2.7, 4.8, 2.8, 3.0, 3.2, 3.2, 3.7]}\n",
+      "{'bid': 'PASS', 'who': 'NN', 'quality': '1', 'candidates': [{'call': 'PASS', 'insta_score': 1.0}], 'hcp': [14.0, 8.2, 11.8], 'shape': [3.2, 3.0, 4.3, 2.5, 3.6, 3.1, 2.7, 3.5, 3.2, 4.8, 1.9, 3.0]}\n",
+      "{'bid': '2N', 'who': 'NN', 'quality': '1', 'candidates': [{'call': '2N', 'insta_score': 1.0}], 'hcp': [6.2, 9.6, 6.6], 'shape': [3.9, 2.5, 2.9, 3.6, 3.4, 4.4, 2.3, 3.0, 3.9, 2.7, 2.9, 3.4]}\n",
+      "{'bid': 'PASS', 'who': 'NN', 'quality': '1', 'candidates': [{'call': 'PASS', 'insta_score': 1.0}], 'hcp': [9.3, 5.9, 18.3], 'shape': [2.6, 4.4, 2.9, 3.1, 3.4, 2.2, 3.5, 3.8, 3.0, 2.6, 4.4, 3.1]}\n",
+      "{'bid': '3N', 'who': 'NN', 'quality': '1.0', 'candidates': [{'call': '3N', 'insta_score': 0.996}], 'samples': ['ATx.AT.AQJ8x.Axx QJ.KJ9x.9x.JT98x K9xx.Q8xx.KT.Kxx 8xxx.xxx.xxxx.Qx 0.99951', 'Ax.AKx.J98xx.AQx 8xx.JTx.Axxx.98x K9xx.Q8xx.KT.Kxx QJTx.9xx.Qx.JTxx 0.99951', 'AQT8.K9x.A9xx.AJ Jxx.JTx.QJxx.98x K9xx.Q8xx.KT.Kxx xx.Axx.8xx.QTxxx 0.99951', 'A8.Axx.A8xx.AQTx QJT.J9.J9xx.98xx K9xx.Q8xx.KT.Kxx xxxx.KTxx.Qxx.Jx 0.99951', 'AQxx.AK9.Axxx.Qx x.JTx.J8xxx.ATxx K9xx.Q8xx.KT.Kxx JT8x.xxx.Q9.J98x 0.99951', 'AQx.AKT.QJxxx.Q8 Jxx.J9xx.98x.Axx K9xx.Q8xx.KT.Kxx T8x.xx.Axx.JT9xx 0.99951', 'AQx.AJ.AQJ9x.JT9 8x.Kxxx.xx.Axxxx K9xx.Q8xx.KT.Kxx JTxx.T9x.8xxx.Q8 0.99902', 'J8x.AK9.AQ9x.A8x Qx.JTx.J8xx.Txxx K9xx.Q8xx.KT.Kxx ATxx.xxx.xxx.QJ9 0.99951', 'Axx.AKx.A9xxx.Ax Tx.9xx.J8xx.T9xx K9xx.Q8xx.KT.Kxx QJ8x.JTx.Qx.QJ8x 0.99902', 'AQ.KJT.Axxxx.AJx xx.Axxx.9x.Q9xxx K9xx.Q8xx.KT.Kxx JT8xx.9x.QJ8x.T8 0.99902', 'A8x.AK9.AQxxx.J8 JT.JTx.J8x.ATxxx K9xx.Q8xx.KT.Kxx Qxxx.xxx.9xx.Q9x 0.99951', 'AQx.AK.QJ9xx.Q9x 8xx.Jxxx.Axx.J8x K9xx.Q8xx.KT.Kxx JTx.T9x.8xx.ATxx 0.99951', 'AQ.KJx.Axxx.A8xx xx.T9xx.Jxx.J9xx K9xx.Q8xx.KT.Kxx JT8xx.Ax.Q98x.QT 0.92480', 'AQJ.KJ.Axxxx.ATx 8xxx.A9x.J9x.xxx K9xx.Q8xx.KT.Kxx Tx.Txxx.Q8x.QJ98 0.99902', 'AJ.Kxx.QJxx.AQJx 8xx.JT9x.A9x.8xx K9xx.Q8xx.KT.Kxx QTxx.Ax.8xxx.T9x 0.99951', 'AQT8.AK.Qxxx.ATx xx.Jxxx.J8x.8xxx K9xx.Q8xx.KT.Kxx Jxx.T9x.A9xx.QJ9 0.99951', 'Ax.AK9.AJxxx.Q9x J8x.Txx.Q8xx.A8x K9xx.Q8xx.KT.Kxx QTxx.Jxx.9x.JTxx 0.99951', 'A8x.AKx.AQJxx.T9 xxx.JT9x.9xxx.8x K9xx.Q8xx.KT.Kxx QJT.xx.8x.AQJxxx 0.99951', 'AQ8.AK.9xxx.AJxx Tx.Jxx.Qxxx.QT8x K9xx.Q8xx.KT.Kxx Jxxx.T9xx.AJ8.9x 0.99951', 'Txx.AKJ.AQJx.Axx AQJ8x.xx.8x.JT8x K9xx.Q8xx.KT.Kxx x.T9xx.9xxxx.Q9x 0.73682'], 'hcp': [5.5, 18.3, 5.2], 'shape': [3.1, 3.2, 3.1, 3.6, 2.9, 2.8, 4.4, 3.0, 3.1, 3.1, 3.3, 3.6]}\n",
+      "{'bid': 'PASS', 'who': 'NN', 'quality': '1', 'candidates': [{'call': 'PASS', 'insta_score': 1.0}], 'hcp': [18.6, 6.7, 9.3], 'shape': [3.1, 2.9, 4.1, 2.9, 3.5, 3.8, 2.5, 3.1, 3.2, 4.1, 2.4, 3.3]}\n",
+      "{'bid': 'PASS', 'who': 'NN', 'quality': '0.93', 'candidates': [{'call': 'PASS', 'insta_score': 1.0, 'adjustment': 0, 'expected_score': 332, 'expected_tricks': 9.8}], 'samples': ['AJ.KJ9.A9xxx.AJ8 KT98x.Txx.QTx.Qx Qxx.Qxxx.8xx.KTx xxx.A8x.KJ.9xxxx 0.94775', 'AJ.KJ9.A9xxx.AJ8 QT9xx.QTx.J8.9xx 8x.8xxx.KTx.KQTx Kxxx.Axx.Qxx.xxx 0.94922', 'AJ.KJ9.A9xxx.AJ8 T.Txxx.K8xx.9xxx K9xx.AQxx.Jx.xxx Q8xxxx.8x.QT.KQT 0.76221', 'AJ.KJ9.A9xxx.AJ8 8xxx.xx.QT.KQTxx K9x.A8xx.K8xx.xx QTxx.QTxx.Jx.9xx 0.94727', 'AJ.KJ9.A9xxx.AJ8 KQTx.8xxx.QJ.Qxx 8xxx.ATxx.T8x.K9 9xx.Qx.Kxx.Txxxx 0.95850', 'AJ.KJ9.A9xxx.AJ8 T8x.Q8xx.xxx.Kxx Kx.xxxx.QJ.QT9xx Q9xxxx.AT.KT8.xx 0.71875', 'AJ.KJ9.A9xxx.AJ8 Txxx.Axx.8xx.Txx xxx.Txxx.Jx.KQxx KQ98.Q8x.KQT.9xx 0.74609', 'AJ.KJ9.A9xxx.AJ8 xxx.AQxx.QJx.Q9x K9x.T8xx.KTx.xxx QT8xx.xx.8x.KTxx 0.90430', 'AJ.KJ9.A9xxx.AJ8 T8xxx.xx.QJT.9xx Qxx.Axxx.Kx.KTxx K9x.QT8x.8xx.Qxx 0.98926', 'AJ.KJ9.A9xxx.AJ8 9xxxxx.Tx.Jx.xxx Q8x.Axxx.8x.KQ9x KT.Q8xx.KQTx.Txx 0.99512', 'AJ.KJ9.A9xxx.AJ8 Txxx.8xx.Txx.Kxx Q8xx.Axxx.8.QT9x K9x.QTx.KQJx.xxx 0.98535', 'AJ.KJ9.A9xxx.AJ8 T8xx.QT8xx.Kx.xx KQx.Axxx.Tx.KT9x 9xxx.x.QJ8x.Qxxx 0.98779', 'AJ.KJ9.A9xxx.AJ8 xxx.xxx.Txx.T9xx Kxx.Q8xx.KQ.Qxxx QT98x.ATx.J8x.Kx 0.77637', 'AJ.KJ9.A9xxx.AJ8 Qxxx.A8x.T8x.T9x KTx.Txxx.Qx.KQxx 98xx.Qxx.KJx.xxx 0.99805', 'AJ.KJ9.A9xxx.AJ8 xxx.Q8xx.QTxx.xx KT8.Txxx.J8.KTxx Q9xxx.Ax.Kx.Q9xx 0.74121', 'AJ.KJ9.A9xxx.AJ8 K98.AQx.Qxx.xxxx Qxxx.Txxx.JT.KT9 Txxx.8xx.K8x.Qxx 0.93994', 'AJ.KJ9.A9xxx.AJ8 Kxxx.Q8xx.Qx.Qxx 98x.ATxx.KTx.T9x QTxx.xx.J8x.Kxxx 0.93066', 'AJ.KJ9.A9xxx.AJ8 T9xx.Qxxx.Jxx.xx Kxx.Axxx.KQ8.9xx Q8xx.T8.Tx.KQTxx 0.99512', 'AJ.KJ9.A9xxx.AJ8 Qxxx.QTx.T8x.K9x T8x.8xxx.KQJx.xx K9xx.Axx.x.QTxxx 0.74414', 'AJ.KJ9.A9xxx.AJ8 Q98x.Axx.Qxx.9xx Kxx.T8xx.JT8.KQT Txxx.Qxx.Kx.xxxx 0.99170'], 'hcp': [6.5, 9.3, 7.1], 'shape': [3.9, 2.8, 2.9, 3.4, 3.3, 3.9, 2.5, 3.3, 4.0, 2.9, 2.9, 3.2]}\n",
+      "{'bid': 'PASS', 'who': 'NN', 'quality': '0.9', 'candidates': [{'call': 'PASS', 'insta_score': 1.0, 'adjustment': 0, 'expected_score': -356, 'expected_tricks': 9.9}], 'samples': ['Jxx.KQ9.ATxx.AKQ T8xx.ATxx.Q8.Txx AKQx.J8xx.Jx.9xx 9x.xx.K9xxx.J8xx 0.99902', 'Kx.Q98.AKJx.AJ8x T8xx.ATxx.Q8.Txx AQxx.Kxxx.xx.Q9x J9x.Jx.T9xxx.Kxx 0.99902', 'AK9x.QJx.AK9x.Jx T8xx.ATxx.Q8.Txx QJx.K9xx.xxx.Axx xx.8x.JTxx.KQ98x 0.99902', 'KJx.K8x.AKJx.Axx T8xx.ATxx.Q8.Txx A9x.Q9xx.9xx.KJx Qxx.Jx.Txxx.Q98x 0.99902', 'QJ9.K8x.AKxx.KQx T8xx.ATxx.Q8.Txx Axxx.Qxxx.Tx.A8x Kx.J9.J9xxx.J9xx 0.99902', 'Axx.KJ.ATxxx.AK9 T8xx.ATxx.Q8.Txx KJx.98xx.KJx.Q8x Q9x.Qxx.9xx.Jxxx 0.99805', 'AQx.Qx.AJT9x.KQx T8xx.ATxx.Q8.Txx KJxx.KJ8x.Kxx.9x 9x.9xx.xxx.AJ8xx 0.99805', 'AK.KJx.KTxx.A8xx T8xx.ATxx.Q8.Txx Q9xx.Q98x.Axx.Kx Jxx.xx.J9xx.QJ9x 0.99805', 'AQx.K9.KTxx.KQJx T8xx.ATxx.Q8.Txx KJxx.QJxx.xxx.Ax 9x.8xx.AJ9x.98xx 0.99805', 'AQ9.Kx.AT9xx.KQ9 T8xx.ATxx.Q8.Txx KJx.J98x.Jx.AJxx xxx.Qxx.Kxxx.8xx 0.99805', 'AKQx.K9.A9xx.QJx T8xx.ATxx.Q8.Txx J9x.Q8xx.JTx.AK8 xx.Jxx.Kxxx.9xxx 0.99805', 'AQx.Qx.AKTxx.QJx T8xx.ATxx.Q8.Txx Kxx.Jxxx.9x.AK8x J9x.K98.Jxxx.9xx 0.99805', 'KQx.K9x.AK9x.Kxx T8xx.ATxx.Q8.Txx Axx.Jxxx.xxx.AQx J9x.Q8.JTxx.J98x 0.99805', 'AKx.K8.Kxxx.KQJx T8xx.ATxx.Q8.Txx QJx.Jxxx.ATx.A98 9xx.Q9x.J9xx.xxx 0.99756', 'KJx.KJx.KT9x.AKx T8xx.ATxx.Q8.Txx AQx.Qxxx.Axx.9xx 9xx.98.Jxxx.QJ8x 0.99756', 'Qxx.Qxx.AKJxx.AK T8xx.ATxx.Q8.Txx A9.KJxx.9xx.Q98x KJxx.98.Txx.Jxxx 0.99756', 'Ax.KQx.KJTx.AQ9x T8xx.ATxx.Q8.Txx KQxx.J98x.xx.Kxx J9x.xx.A9xxx.J8x 0.99756', 'QJx.KQ.AKJTx.QJx T8xx.ATxx.Q8.Txx Axx.8xxx.xx.AKxx K9x.J9x.9xxx.98x 0.99756', 'Kx.KQx.AK9xx.A9x T8xx.ATxx.Q8.Txx AQJ.J8xx.xxx.KJx 9xxx.9x.JTx.Q8xx 0.99756', 'Kxx.KJx.Kxxx.AKQ T8xx.ATxx.Q8.Txx AQ9x.Q8xx.J9.8xx Jx.9x.ATxxx.J9xx 0.99756'], 'hcp': [9.3, 5.8, 18.4], 'shape': [2.7, 4.0, 3.1, 3.2, 3.3, 2.5, 3.5, 3.7, 3.0, 2.7, 4.3, 3.1]}\n",
+      "['1D', 'PASS', '1H', 'PASS', '2N', 'PASS', '3N', 'PASS', 'PASS', 'PASS']\n"
      ]
     }
    ],
@@ -175,7 +183,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -189,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
