--- a/UCBC 2024/Simulations/BiddingMichaels.ipynb
+++ b/UCBC 2024/Simulations/BiddingMichaels.ipynb
@@ -20,11 +20,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:3: The name tf.disable_v2_behavior is deprecated. Please use tf.compat.v1.disable_v2_behavior instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\ProgramData\\miniconda3\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:98: disable_resource_variables (from tensorflow.python.ops.resource_variables_toggle) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_same-5556000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_same-5556000\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:12: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
+      "\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:21: The name tf.train.import_meta_graph is deprecated. Please use tf.compat.v1.train.import_meta_graph instead.\n",
+      "\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_V2-3125000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_V2-3125000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/contract-193200\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_V2-3125000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/Jack/lr3-1000000\n",
@@ -32,11 +40,11 @@
       "INFO:tensorflow:Restoring parameters from ..\\Models/lefty_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/dummy_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/righty_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_nt-950000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lefty_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/dummy_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/righty_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_suit-1278000\n"
+      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_suit-999000\n"
      ]
     }
    ],
@@ -74,13 +82,36 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loaded lib dds.dll\n",
+      "DDSolver being loaded - dds mode 1\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[{'call': '4S', 'insta_score': 0.101, 'expected_score': 615, 'adjustment': 5},\n",
-       " {'call': '3C', 'insta_score': 0.116, 'expected_score': 566, 'adjustment': 6},\n",
-       " {'call': '2S', 'insta_score': 0.265, 'expected_score': 240, 'adjustment': 13},\n",
-       " {'call': '2H', 'insta_score': 0.165, 'expected_score': 191, 'adjustment': 8},\n",
-       " {'call': '3D', 'insta_score': 0.115, 'expected_score': 81, 'adjustment': 6}]"
+       "[{'call': '2N',\n",
+       "  'insta_score': 0.155,\n",
+       "  'adjustment': 8,\n",
+       "  'expected_score': 571,\n",
+       "  'expected_tricks': 11.0},\n",
+       " {'call': '4S',\n",
+       "  'insta_score': 0.126,\n",
+       "  'adjustment': 6,\n",
+       "  'expected_score': 571,\n",
+       "  'expected_tricks': 11.0},\n",
+       " {'call': '3C',\n",
+       "  'insta_score': 0.334,\n",
+       "  'adjustment': 17,\n",
+       "  'expected_score': 73,\n",
+       "  'expected_tricks': 8.7},\n",
+       " {'call': '4C',\n",
+       "  'insta_score': 0.157,\n",
+       "  'adjustment': 8,\n",
+       "  'expected_score': 37,\n",
+       "  'expected_tricks': 8.7}]"
       ]
      },
      "execution_count": 2,
@@ -92,8 +123,11 @@
     "vuln_ns, vuln_ew = True, False\n",
     "hand = 'K983.8.AJ873.AQ6'\n",
     "\n",
+    "from ddsolver import ddsolver\n",
+    "dds = ddsolver.DDSolver()\n",
+    "\n",
     "auction = [\"PAD_START\",\"1C\",\"2C\",\"PASS\"]\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 0, 1, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 0, 1, dds, False)\n",
     "\n",
     "bid = bot_bid.bid(auction)\n",
     "bid.to_dict()['candidates']\n",
@@ -111,66 +145,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "K98x.8.AJ8xx.AQx T.Kx.KTxxx.KT8xx AQJxx.JT9xxx..Jx xxx.AQxx.Q9x.9xx 0.73685 \n",
-      " 1C-2C-P-2S-P-P-P (10.8, 11.5)  \n",
-      " 1C-2C-P-2H-P-P-P (8.2, 8.9)  \n",
-      " 1C-2C-P-3C-X-P-P-4S-P-P-P (10.8, 11.0)  \n",
-      " 1C-2C-P-3D-X-P-3H-3S-P-P-P (10.8, 11.3)  \n",
-      " 1C-2C-P-4S-P-P-P (10.8, 11.3) \n",
-      "K98x.8.AJ8xx.AQx x.A9xxx.T.KT98xx ATxxx.KQJxx.Q.xx QJx.Tx.K9xxxx.Jx 0.73749 \n",
-      " 1C-2C-P-2S-P-P-3D-3S-P-P-P (10.9, 10.8)  \n",
-      " 1C-2C-P-2H-P-P-3D-3S-P-P-P (10.9, 10.7)  \n",
-      " 1C-2C-P-3C-X-P-P-4S-P-P-P (10.9, 10.7)  \n",
-      " 1C-2C-P-3D-P-P-P (8.3, 9.4)  \n",
-      " 1C-2C-P-4S-P-P-P (10.9, 10.9) \n",
-      "K98x.8.AJ8xx.AQx A.Txxx.Q9.KT98xx QJTxxx.KJ9xx.KT. xx.AQx.xxxx.Jxxx 0.73095 \n",
-      " 1C-2C-P-2S-P-P-P (11.1, 11.5)  \n",
-      " 1C-2C-P-2H-P-2S-P-4S-P-P-P (10.8, 11.2)  \n",
-      " 1C-2C-P-3C-X-P-P-4S-P-P-P (11.1, 11.5)  \n",
-      " 1C-2C-P-3D-P-P-P (10.0, 10.9)  \n",
-      " 1C-2C-P-4S-P-P-P (11.1, 11.5) \n",
-      "K98x.8.AJ8xx.AQx A.K9.QTx.KT98xxx QJTxx.AQJTxx..Jx xxx.xxxx.K9xxx.x 0.99630 \n",
-      " 1C-2C-P-2S-3C-P-P-3S-4C-P-P-4S-P-P-P (10.8, 11.3)  \n",
-      " 1C-2C-P-2H-3C-P-P-3S-4C-P-P-4S-P-P-P (10.8, 11.4)  \n",
-      " 1C-2C-P-3C-4C-4H-P-P-P (10.0, 10.3)  \n",
-      " 1C-2C-P-3D-4C-P-P-4S-P-P-P (10.8, 11.3)  \n",
-      " 1C-2C-P-4S-P-P-P (10.8, 11.3) \n",
-      "K98x.8.AJ8xx.AQx .KQxx.QT9x.J98xx AQJxxxx.ATxxx..x Tx.J9x.Kxxx.KTxx 0.71253 \n",
-      " 1C-2C-P-2S-P-P-3C-3S-P-4S-P-P-P (12.4, 12.4)  \n",
-      " 1C-2C-P-2H-P-2S-P-4S-P-P-P (12.4, 12.4)  \n",
-      " 1C-2C-P-3C-P-4S-P-P-P (12.4, 12.4)  \n",
-      " 1C-2C-P-3D-P-4S-P-P-P (12.4, 12.4)  \n",
-      " 1C-2C-P-4S-P-P-P (12.4, 12.4) \n",
-      "K98x.8.AJ8xx.AQx A.KJ.Kxxx.KJTxxx Qxxxx.AQTxxx.x.x JTx.9xxx.QT9.98x 0.98503 \n",
-      " 1C-2C-P-2S-3C-P-P-3S-P-P-P (10.8, 11.0)  \n",
-      " 1C-2C-P-2H-3C-P-P-3S-P-P-P (10.8, 10.7)  \n",
-      " 1C-2C-P-3C-X-P-P-4S-P-P-P (10.8, 10.9)  \n",
-      " 1C-2C-P-3D-4C-P-P-4S-P-P-P (10.8, 11.0)  \n",
-      " 1C-2C-P-4S-P-P-P (10.8, 10.9) \n",
-      "K98x.8.AJ8xx.AQx A.KJxx.T9x.Kxxxx QJTxx.AQxxx.KQ.T xxx.T9x.xxx.J98x 0.99205 \n",
-      " 1C-2C-P-2S-P-P-P (11.9, 12.1)  \n",
-      " 1C-2C-P-2H-P-P-P (9.4, 10.0)  \n",
-      " 1C-2C-P-3C-X-P-P-4S-P-P-P (11.9, 12.1)  \n",
-      " 1C-2C-P-3D-P-P-P (11.4, 11.5)  \n",
-      " 1C-2C-P-4S-P-P-P (11.9, 12.1) \n",
-      "K98x.8.AJ8xx.AQx Q.AJx.KQx.J98xxx AJTxxx.K9xxx.9x. xx.QTxx.Txx.KTxx 0.96687 \n",
-      " 1C-2C-P-2S-P-P-P (11.6, 11.5)  \n",
-      " 1C-2C-P-2H-P-P-P (8.3, 9.7)  \n",
-      " 1C-2C-P-3C-X-P-P-4S-P-P-P (11.6, 11.5)  \n",
-      " 1C-2C-P-3D-P-P-P (10.0, 10.7)  \n",
-      " 1C-2C-P-4S-P-P-P (11.6, 11.5) \n",
-      "K98x.8.AJ8xx.AQx AT.Q9x.Kxx.JT9xx Qxxxx.KJTxx.T.Kx Jx.Axxx.Q9xx.8xx 0.70889 \n",
-      " 1C-2C-P-2S-P-P-P (10.4, 10.5)  \n",
-      " 1C-2C-P-2H-P-P-P (8.2, 8.5)  \n",
-      " 1C-2C-P-3C-P-3H-P-3N-P-4C-P-4D-P-4S-P-P-P (10.1, 10.6)  \n",
-      " 1C-2C-P-3D-P-P-P (7.7, 8.0)  \n",
-      " 1C-2C-P-4S-P-P-P (10.4, 10.5) \n",
-      "K98x.8.AJ8xx.AQx Txx.Kx.Qx.KJ9xxx AQxxx.Q9xxx.Kx.x J.AJTxx.T9xx.T8x 0.74809 \n",
-      " 1C-2C-P-2S-P-P-P (11.1, 11.4)  \n",
-      " 1C-2C-P-2H-P-P-P (7.1, 9.0)  \n",
-      " 1C-2C-P-3C-X-P-P-4S-P-P-P (11.1, 11.4)  \n",
-      " 1C-2C-P-3D-P-P-P (9.8, 10.6)  \n",
-      " 1C-2C-P-4S-P-P-P (11.1, 11.4) \n"
+      "K98x.8.AJ8xx.AQx J.KQx.Kxx.KJTxxx QTxxx.AJxxxx.9x. Axx.T9x.QTx.98xx 0.98828 \n",
+      " 1C-2C-P-3C-X-3H-P-3N-P-4H-P-4N-P-5C-P-5H-P-P-P (10, 8.8)  \n",
+      " 1C-2C-P-4C-X-P-P-4H-P-P-P (10, 8.9)  \n",
+      " 1C-2C-P-2N-3C-3H-4C-4S-P-P-P (12, 10.2)  \n",
+      " 1C-2C-P-4S-P-P-P (12, 10.2) \n",
+      "K98x.8.AJ8xx.AQx AQ.QT.KQ9.K98xxx JTxxx.KJ9xxx.x.x xx.Axxx.Txxx.JTx 0.82764 \n",
+      " 1C-2C-P-3C-X-3H-P-3N-P-4H-P-4N-P-5D-P-6S-P-P-P (10, 9.5)  \n",
+      " 1C-2C-P-4C-X-P-P-4H-P-P-P (10, 7.4)  \n",
+      " 1C-2C-P-2N-3C-3H-P-4S-P-P-P (10, 9.5)  \n",
+      " 1C-2C-P-4S-P-P-P (10, 9.5) \n",
+      "K98x.8.AJ8xx.AQx A.Axx.Qxxx.Txxxx QJxxx.KQ9xxx.K.9 Txx.JTx.T9x.KJ8x 0.74902 \n",
+      " 1C-2C-P-3C-X-P-P-3H-P-4H-P-P-P (10, 9.7)  \n",
+      " 1C-2C-P-4C-X-P-P-4H-P-P-P (10, 9.7)  \n",
+      " 1C-2C-P-2N-P-3H-P-4S-P-P-P (11, 10.8)  \n",
+      " 1C-2C-P-4S-P-P-P (11, 10.8) \n",
+      "K98x.8.AJ8xx.AQx A.ATxx.Kx.JT9xxx QTxxx.KJ9xxx.T.8 Jxx.Qx.Q9xxx.Kxx 0.91650 \n",
+      " 1C-2C-P-3C-X-P-P-3H-P-P-P (9, 8.4)  \n",
+      " 1C-2C-P-4C-X-P-P-4H-P-P-P (9, 8.4)  \n",
+      " 1C-2C-P-2N-P-3H-P-4S-P-P-P (11, 10.0)  \n",
+      " 1C-2C-P-4S-P-P-P (11, 10.0) \n",
+      "K98x.8.AJ8xx.AQx x.AQxx.xx.K98xxx AQJxx.KT9xx.K.Jx Txx.Jxx.QT9xx.Tx 0.74902 \n",
+      " 1C-2C-P-3C-X-P-P-3H-P-4H-P-P-P (10, 8.8)  \n",
+      " 1C-2C-P-4C-X-P-P-4H-P-P-P (10, 8.8)  \n",
+      " 1C-2C-P-2N-P-3H-P-4S-P-P-P (12, 11.7)  \n",
+      " 1C-2C-P-4S-P-P-P (12, 11.7) \n",
+      "K98x.8.AJ8xx.AQx .KQTx.xxx.KJ98xx QJTxxx.A9xxx.K.T Axx.Jxx.QT9x.xxx 0.74805 \n",
+      " 1C-2C-P-3C-X-P-P-3H-P-4H-P-P-P (8, 6.9)  \n",
+      " 1C-2C-P-4C-X-P-P-4H-P-P-P (8, 6.9)  \n",
+      " 1C-2C-P-2N-P-3H-P-4S-P-P-P (12, 11.1)  \n",
+      " 1C-2C-P-4S-P-P-P (12, 11.1) \n",
+      "K98x.8.AJ8xx.AQx Q.KTxx.KQ.KJT9xx JTxxxx.AQ9xx.x.x Ax.Jxx.T9xxx.8xx 0.97168 \n",
+      " 1C-2C-P-3C-X-P-P-3H-P-P-P (10, 7.4)  \n",
+      " 1C-2C-P-4C-X-P-P-4H-P-P-P (10, 7.4)  \n",
+      " 1C-2C-P-2N-3C-P-P-4S-P-P-P (12, 11.0)  \n",
+      " 1C-2C-P-4S-P-P-P (12, 11.0) \n",
+      "K98x.8.AJ8xx.AQx x.AJ9x.Kxx.K9xxx QJxxx.KTxxx.Qx.x ATx.Qxx.T9x.JT8x 0.91260 \n",
+      " 1C-2C-P-3C-X-P-P-3H-P-P-P (7, 6.5)  \n",
+      " 1C-2C-P-4C-X-P-P-4H-P-P-P (7, 6.5)  \n",
+      " 1C-2C-P-2N-P-3H-P-4S-P-P-P (10, 9.8)  \n",
+      " 1C-2C-P-4S-P-P-P (10, 9.8) \n",
+      "K98x.8.AJ8xx.AQx Ax.xx.QTx.KJTxxx Qxxxx.AK9xx.K.98 JT.QJTxx.9xxx.xx 0.84961 \n",
+      " 1C-2C-P-3C-X-P-P-3H-P-4H-P-P-P (9, 8.0)  \n",
+      " 1C-2C-P-4C-X-P-P-4H-P-P-P (9, 8.0)  \n",
+      " 1C-2C-P-2N-P-3H-P-4S-P-P-P (12, 10.8)  \n",
+      " 1C-2C-P-4S-P-P-P (12, 10.8) \n",
+      "K98x.8.AJ8xx.AQx AJxx.Kx.Q9x.J98x QTxxx.AQTxx..xxx .J9xxx.KTxxx.KTx 0.72949 \n",
+      " 1C-2C-P-3C-P-3H-P-3N-P-P-P (8, 8.3)  \n",
+      " 1C-2C-P-4C-P-4S-P-P-P (11, 10.8)  \n",
+      " 1C-2C-P-2N-P-3H-P-4S-P-P-P (11, 10.2)  \n",
+      " 1C-2C-P-4S-P-P-P (11, 10.2) \n"
      ]
     }
    ],
@@ -184,7 +208,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -198,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
