--- a/UCBC 2024/Simulations/BiddingValidationDuringPlay.ipynb
+++ b/UCBC 2024/Simulations/BiddingValidationDuringPlay.ipynb
@@ -20,24 +20,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:3: The name tf.disable_v2_behavior is deprecated. Please use tf.compat.v1.disable_v2_behavior instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\ProgramData\\miniconda3\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:98: disable_resource_variables (from tensorflow.python.ops.resource_variables_toggle) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
-      "INFO:tensorflow:Restoring parameters from ..\\..\\UCBC 2024/Models/bidding_V2-5158000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\..\\models/contract/contract-193200\n",
-      "INFO:tensorflow:Restoring parameters from ..\\..\\UCBC 2024/Models/binfo_V2-5158000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\..\\UCBC 2024/Models/lead_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\..\\UCBC 2024/Models/lead_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\..\\UCBC 2024/Models/Jack/lr3-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\..\\UCBC 2024/Models/single_dummy-32768000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\..\\UCBC 2024/Models/lefty_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\..\\UCBC 2024/Models/decl_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\..\\UCBC 2024/Models/righty_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\..\\UCBC 2024/Models/decl_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\..\\UCBC 2024/Models/lefty_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\..\\UCBC 2024/Models/decl_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\..\\UCBC 2024/Models/righty_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\..\\UCBC 2024/Models/decl_suit-999000\n"
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:12: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
+      "\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:21: The name tf.train.import_meta_graph is deprecated. Please use tf.compat.v1.train.import_meta_graph instead.\n",
+      "\n",
+      "INFO:tensorflow:Restoring parameters from ../..\\models/GIB/2024-07-06_bidding_V2-3114000\n",
+      "INFO:tensorflow:Restoring parameters from ../..\\models/GIB/2024-07-06_bidding_V2-3114000\n",
+      "INFO:tensorflow:Restoring parameters from ../..\\models/contract/contract-193200\n",
+      "INFO:tensorflow:Restoring parameters from ../..\\models/GIB/binfo_V2-1420000\n",
+      "INFO:tensorflow:Restoring parameters from ../..\\UCBC 2024/Models/lead_suit-999000\n",
+      "INFO:tensorflow:Restoring parameters from ../..\\UCBC 2024/Models/lead_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ../..\\models/lr3_model/lr3-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ../..\\models/single_dummy/single_dummy-32768000\n",
+      "INFO:tensorflow:Restoring parameters from ../..\\models/playing/lefty_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ../..\\models/playing/dummy_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ../..\\models/playing/righty_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ../..\\models/playing/decl_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ../..\\models/playing/lefty_suit-999000\n",
+      "INFO:tensorflow:Restoring parameters from ../..\\models/playing/dummy_suit-999000\n",
+      "INFO:tensorflow:Restoring parameters from ../..\\models/playing/righty_suit-999000\n",
+      "INFO:tensorflow:Restoring parameters from ../..\\models/playing/decl_suit-999000\n"
      ]
     }
    ],
@@ -67,13 +74,13 @@
     "np.set_printoptions(precision=2, suppress=True, linewidth=200)\n",
     "np.random.seed(42)\n",
     "\n",
-    "models = Models.from_conf(conf.load('../../Src/config/default.conf'),'..\\..')   # loading neural networks\n",
-    "sampler = Sample.from_conf(conf.load('../../Src/config/default.conf'), False)  # Load sampling strategies"
+    "models = Models.from_conf(conf.load('../../Src/config/default_tf1x.conf'),'../..')   # loading neural networks\n",
+    "sampler = Sample.from_conf(conf.load('../../Src/config/default_tf1x.conf'), False)  # Load sampling strategies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "44786d5d",
    "metadata": {},
    "outputs": [
@@ -81,31 +88,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Me PAD_START\n",
-      "LHO PAD_START\n",
-      "PAR PAD_START\n",
-      "RHO PASS\n",
-      "Me 1N\n",
-      "LHO PASS\n",
-      "PAR PASS\n",
-      "RHO PASS\n",
-      "[[[ 0.    1.    1.5  -0.14  0.43  0.43 -0.71  0.    0.    0.    1.    0.    1.    0.    1.    1.    0.    0.    0.    0.    0.    0.    3.    1.    1.    0.    0.    0.    0.    0.    2.    1.\n",
-      "    0.    0.    0.    1.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.  ]\n",
-      "  [ 0.    1.    1.5  -0.14  0.43  0.43 -0.71  0.    0.    0.    1.    0.    1.    0.    1.    1.    0.    0.    0.    0.    0.    0.    3.    1.    1.    0.    0.    0.    0.    0.    2.    1.\n",
-      "    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.  ]]]\n",
-      "[[0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]\n",
-      "1N [1.]\n",
       "[1.]\n"
      ]
     }
@@ -127,10 +109,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5d7ac78f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.05]\n"
+     ]
+    }
+   ],
    "source": [
     "hand_str = \"8.9xx.9x.KT8xxxx\"\n",
     "hand = parse_hand_f(32)(hand_str).reshape(32)\n",
@@ -142,10 +132,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "44f5dbc0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n"
+     ]
+    }
+   ],
    "source": [
     "hand_str = \"A9x.AK.T8xx.Q9xx\"\n",
     "hand = parse_hand_f(32)(hand_str).reshape(32)\n",
@@ -157,9 +155,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n"
+     ]
+    }
+   ],
    "source": [
     "hand_str = \"KTxx.J9xx.Qx.AKx\"\n",
     "hand = parse_hand_f(32)(hand_str).reshape(32)\n",
@@ -172,7 +178,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -186,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
