--- a/UCBC 2024/Simulations/OpeningLead3S.ipynb
+++ b/UCBC 2024/Simulations/OpeningLead3S.ipynb
@@ -20,23 +20,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:3: The name tf.disable_v2_behavior is deprecated. Please use tf.compat.v1.disable_v2_behavior instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\ProgramData\\miniconda3\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:98: disable_resource_variables (from tensorflow.python.ops.resource_variables_toggle) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_same-5556000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_same-5556000\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:12: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
+      "\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:21: The name tf.train.import_meta_graph is deprecated. Please use tf.compat.v1.train.import_meta_graph instead.\n",
+      "\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_V2-3125000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_V2-3125000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/contract-193200\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_V2-3125000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/Jack/lr3-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-32768000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/lefty-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/dummy-920000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/righty-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/decl-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/lefty-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/dummy-920000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/righty-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/decl-1000000\n"
+      "INFO:tensorflow:Restoring parameters from ..\\Models/lefty_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/dummy_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/righty_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/lefty_suit-999000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/dummy_suit-999000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/righty_suit-999000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_suit-999000\n"
      ]
     }
    ],
@@ -69,7 +77,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loaded lib dds.dll\n"
+      "Loaded lib dds.dll\n",
+      "DDSolver being loaded - dds mode 1\n"
      ]
     }
    ],
@@ -81,9 +90,11 @@
     "# the auction goes:\n",
     "auction = [\"PAD_START\",\"PAD_START\", \"PASS\", \"2D\", \"3S\", \"PASS\", \"PASS\", \"PASS\"]\n",
     "\n",
-    "# what to lead?\n",
+    "from ddsolver import ddsolver\n",
+    "dds = ddsolver.DDSolver()\n",
     "\n",
-    "lead_bot = BotLead([True, True], hand, models, sampler, seat, dealer, False)\n",
+    "# what to lead?\n",
+    "lead_bot = BotLead([True, True], hand, models, sampler, seat, dealer, dds, False)\n",
     "lead = lead_bot.find_opening_lead(auction)"
    ]
   },
@@ -128,21 +139,25 @@
      "data": {
       "text/plain": [
        "[{'card': 'HK',\n",
-       "  'insta_score': 0.336,\n",
-       "  'expected_tricks_sd': 5.75,\n",
-       "  'p_make_contract': 1.0},\n",
-       " {'card': 'HA',\n",
-       "  'insta_score': 0.209,\n",
-       "  'expected_tricks_sd': 5.75,\n",
-       "  'p_make_contract': 1.0},\n",
+       "  'insta_score': 0.393,\n",
+       "  'expected_tricks_dd': 5.75,\n",
+       "  'p_make_contract': 1.0,\n",
+       "  'expected_score_dd': -325},\n",
        " {'card': 'DJ',\n",
-       "  'insta_score': 0.269,\n",
-       "  'expected_tricks_sd': 5.86,\n",
-       "  'p_make_contract': 0.99},\n",
+       "  'insta_score': 0.259,\n",
+       "  'expected_tricks_dd': 5.83,\n",
+       "  'p_make_contract': 1.0,\n",
+       "  'expected_score_dd': -316},\n",
+       " {'card': 'HA',\n",
+       "  'insta_score': 0.21,\n",
+       "  'expected_tricks_dd': 5.75,\n",
+       "  'p_make_contract': 1.0,\n",
+       "  'expected_score_dd': -325},\n",
        " {'card': 'Cx',\n",
-       "  'insta_score': 0.173,\n",
-       "  'expected_tricks_sd': 5.93,\n",
-       "  'p_make_contract': 0.99}]"
+       "  'insta_score': 0.126,\n",
+       "  'expected_tricks_dd': 5.91,\n",
+       "  'p_make_contract': 1.0,\n",
+       "  'expected_score_dd': -310}]"
       ]
      },
      "execution_count": 4,
@@ -176,26 +191,26 @@
     {
      "data": {
       "text/plain": [
-       "['AQT8.AKT8x.JT.xx xx.J9xx.K8xx.Kxx J.xx.AQ9xxx.JT98 K9xxxx.Qx.x.AQxx 0.70159',\n",
-       " 'AQT8.AKT8x.JT.xx x.xxxx.KQ9x.AT8x .Jx.A8xxxx.KQ9xx KJ9xxxxx.Q9.x.Jx 0.73502',\n",
-       " 'AQT8.AKT8x.JT.xx x.QJ9x.K9x.J98xx x.xx.A8xxxx.KQTx KJ9xxxx.xx.Qx.Ax 0.76897',\n",
-       " 'AQT8.AKT8x.JT.xx KJxx.J9x.8xx.Jxx x.xx.KQxxxx.Q8xx 9xxx.Qxx.A9.AKT9 0.70293',\n",
-       " 'AQT8.AKT8x.JT.xx xx.xxx.xxxx.Kxxx J.Q9x.KQ98xx.Q9x K9xxxx.Jx.A.AJT8 0.73150',\n",
-       " 'AQT8.AKT8x.JT.xx .J9xxx.Axx.AJT8x 9.xx.KQ8xxx.KQxx KJxxxxxx.Q.9x.9x 0.71827',\n",
-       " 'AQT8.AKT8x.JT.xx 9.Jxxx.8xx.QJ8xx xx.Qxx.KQ9xxx.K9 KJxxxx.9.Ax.ATxx 0.72537',\n",
-       " 'AQT8.AKT8x.JT.xx x.9xx.Kxxx.KJxxx x.Jxx.Q98xxx.AQ8 KJ9xxxx.Qx.A.T9x 0.78828',\n",
-       " 'AQT8.AKT8x.JT.xx .Qxxxx.A8xx.KT9x 9.9x.KQ9xxx.AJ8x KJxxxxxx.J.x.Qxx 0.74332',\n",
-       " 'AQT8.AKT8x.JT.xx xxx.Jx.8xx.AJxxx .xxx.AQ9xxx.Q98x KJ9xxx.Q9x.Kx.KT 0.70597',\n",
-       " 'AQT8.AKT8x.JT.xx x.Jxxx.K8x.QT8xx x.9.Q9xxxx.AK9xx KJ9xxxx.Qxx.Ax.J 0.77267',\n",
-       " 'AQT8.AKT8x.JT.xx x.Qxxx.Axx.QT9xx x.Jx.KQ98xx.KJxx KJ9xxxx.9x.xx.A8 0.71043',\n",
-       " 'AQT8.AKT8x.JT.xx KJ9.Qxx.xxx.JT8x x.J9x.Q98xxx.AKx xxxxx.xx.AK.Q9xx 0.71337',\n",
-       " 'AQT8.AKT8x.JT.xx 9xx.J9x.xxx.Kxxx .xx.KQ98xx.QJ98x KJxxxx.Qxx.Ax.AT 0.72768',\n",
-       " 'AQT8.AKT8x.JT.xx .9xxxx.A8xx.T8xx 9x.Qx.KQ9xxx.QJx KJxxxxx.J.x.AK9x 0.71550',\n",
-       " 'AQT8.AKT8x.JT.xx xx.9xxx.Q9x.J8xx .QJ.Kxxxxx.QT9xx KJ9xxxx.xx.A8.AK 0.73995',\n",
-       " 'AQT8.AKT8x.JT.xx .Qxxxx.98xx.KJ9x x.9x.KQxxxx.QTxx KJ9xxxxx.J.A.A8x 0.70210',\n",
-       " 'AQT8.AKT8x.JT.xx x.Jxxx.8xx.AJ8xx x.Qx.K9xxxx.KQT9 KJ9xxxx.9x.AQ.xx 0.78324',\n",
-       " 'AQT8.AKT8x.JT.xx Kx.9xx.8xxx.Qxxx .Qxx.KQ9xxx.T98x J9xxxxx.Jx.A.AKJ 0.73905',\n",
-       " 'AQT8.AKT8x.JT.xx Jx.Qxxx.xxxx.Qxx x.9x.AQ98xx.K8xx K9xxxx.Jx.K.AJT9 0.73842']"
+       "['AQT8.AKT8x.JT.xx x.9xx.98x.AQT98x x.Jxx.KQxxxx.KJx KJ9xxxx.Qx.Ax.xx 0.85400',\n",
+       " 'AQT8.AKT8x.JT.xx 9.J9xxx.KQ9.T98x J.x.A8xxxx.AJxxx Kxxxxxx.Qx.xx.KQ 0.80908',\n",
+       " 'AQT8.AKT8x.JT.xx 9x.xx.98x.AJ9xxx x.QJx.KQxxxx.QT8 KJxxxx.9xx.Ax.Kx 0.83301',\n",
+       " 'AQT8.AKT8x.JT.xx x.xx.K8xx.QT98xx xx.Jx.Q9xxxx.AKx KJ9xxx.Q9xx.A.Jx 0.80176',\n",
+       " 'AQT8.AKT8x.JT.xx Kx.9x.Q8xx.QT9xx x.Jx.AK9xxx.J8xx J9xxxx.Qxxx.x.AK 0.83594',\n",
+       " 'AQT8.AKT8x.JT.xx x.Q9xx.xxx.AQJ9x x.Jxx.KQ98xx.KT8 KJ9xxxx.x.Ax.xxx 0.73389',\n",
+       " 'AQT8.AKT8x.JT.xx x.9xxx.AKxx.T8xx x.Jx.Q98xxx.AQJx KJ9xxxx.Qx.x.K9x 0.80322',\n",
+       " 'AQT8.AKT8x.JT.xx x.Jxx.8xxx.AK98x K.9x.KQ9xxx.QTxx J9xxxxx.Qxx.A.Jx 0.76318',\n",
+       " 'AQT8.AKT8x.JT.xx xx.Jxxx.Qxx.QTxx .Q9x.AK98xx.J8xx KJ9xxxx.x.xx.AK9 0.83838',\n",
+       " 'AQT8.AKT8x.JT.xx x.Jxxx.9x.KQJT9x 9x.Qx.AKxxxx.8xx KJxxxx.9x.Q8x.Ax 0.81494',\n",
+       " 'AQT8.AKT8x.JT.xx xx.9xxx.9x.AQ9xx x.Jx.KQxxxx.KT8x KJ9xxx.Qx.A8x.Jx 0.82666',\n",
+       " 'AQT8.AKT8x.JT.xx x.QJx.xxx.QJT9xx x.xxx.KQ98xx.K8x KJ9xxxx.9x.Ax.Ax 0.84717',\n",
+       " 'AQT8.AKT8x.JT.xx xx.Q9xxx.KQxx.Jx x.Jx.A98xxx.KTxx KJ9xxx.x.x.AQ98x 0.71240',\n",
+       " 'AQT8.AKT8x.JT.xx x.QJxx.Qxxx.J8xx x.xx.A98xxx.A9xx KJ9xxxx.9x.K.KQT 0.83496',\n",
+       " 'AQT8.AKT8x.JT.xx x.Jxx.xxx.KQ98xx Jx.Qx.AQ8xxx.Txx K9xxxx.9xx.K9.AJ 0.83252',\n",
+       " 'AQT8.AKT8x.JT.xx 9.Qxxx.Kxxx.JTxx x.J9x.AQ98xx.K9x KJxxxxx.x.x.AQ8x 0.85010',\n",
+       " 'AQT8.AKT8x.JT.xx xx.9xxx.K8x.KQT8 xx.x.AQ9xxx.Jxxx KJ9xx.QJx.xx.A9x 0.70068',\n",
+       " 'AQT8.AKT8x.JT.xx .Q9xx.K8x.QJT8xx x.x.Q9xxxx.AK9xx KJ9xxxxx.Jxx.Ax. 0.76416',\n",
+       " 'AQT8.AKT8x.JT.xx 9x.xxx.KQ9x.KT9x x.Jxx.A8xxxx.AJx KJxxxx.Q9.x.Q8xx 0.79199',\n",
+       " 'AQT8.AKT8x.JT.xx 9.QJ9xxx.8xx.9xx x.x.KQ9xxx.KQTxx KJxxxxx.x.Ax.AJ8 0.81787']"
       ]
      },
      "execution_count": 5,
@@ -213,7 +228,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -227,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
