--- a/UCBC 2024/Simulations/OpeningLead4S.ipynb
+++ b/UCBC 2024/Simulations/OpeningLead4S.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c3397678",
    "metadata": {},
    "outputs": [
@@ -135,9 +135,11 @@
     "# the auction goes:\n",
     "auction = [\"PASS\", \"1C\", \"1S\", \"PASS\", \"3C\", \"PASS\", \"4S\", \"PASS\", \"PASS\", \"PASS\"]\n",
     "\n",
-    "# what to lead?\n",
+    "from ddsolver import ddsolver\n",
+    "dds = ddsolver.DDSolver()\n",
     "\n",
-    "lead_bot = BotLead([True, False], hand, models, sampler, seat, 0, True)\n",
+    "# what to lead?\n",
+    "lead_bot = BotLead([True, False], hand, models, sampler, seat, 0, dds, True)\n",
     "lead = lead_bot.find_opening_lead(auction)"
    ]
   },
