--- a/UCBC 2024/Simulations/OpeningLead6S.ipynb
+++ b/UCBC 2024/Simulations/OpeningLead6S.ipynb
@@ -20,23 +20,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:3: The name tf.disable_v2_behavior is deprecated. Please use tf.compat.v1.disable_v2_behavior instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\ProgramData\\miniconda3\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:98: disable_resource_variables (from tensorflow.python.ops.resource_variables_toggle) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_same-5556000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_same-5556000\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:12: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
+      "\n",
+      "WARNING:tensorflow:From d:\\GitHub\\ben\\UCBC 2024\\Simulations\\../../src\\nn\\bidderv2.py:21: The name tf.train.import_meta_graph is deprecated. Please use tf.compat.v1.train.import_meta_graph instead.\n",
+      "\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_V2-3125000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding_V2-3125000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/contract-193200\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo_V2-3125000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-475000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/Jack/lr3-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-32768000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/lefty-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/dummy-920000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/righty-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/decl-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/lefty-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/dummy-920000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/righty-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/jack/decl-1000000\n"
+      "INFO:tensorflow:Restoring parameters from ..\\Models/lefty_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/dummy_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/righty_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/lefty_suit-999000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/dummy_suit-999000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/righty_suit-999000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/decl_suit-999000\n"
      ]
     }
    ],
@@ -61,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c3397678",
    "metadata": {},
    "outputs": [
@@ -69,7 +77,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loaded lib dds.dll\n"
+      "Loaded lib dds.dll\n",
+      "DDSolver being loaded - dds mode 1\n"
      ]
     }
    ],
@@ -80,25 +89,27 @@
     "# the auction goes:\n",
     "auction = [\"PAD_START\",\"PAD_START\",\"PAD_START\",\"1C\", \"PASS\", \"2S\", \"PASS\", \"3S\", \"PASS\", \"4D\",  \"PASS\", \"4S\", \"PASS\", \"4N\", \"PASS\", \"5D\", \"PASS\", \"6S\", \"PASS\", \"PASS\", \"PASS\"]\n",
     "\n",
-    "# what to lead?\n",
+    "from ddsolver import ddsolver\n",
+    "dds = ddsolver.DDSolver()\n",
     "\n",
-    "lead_bot = BotLead([True, True], hand, models, sampler, seat=2, dealer=3, verbose=False)\n",
+    "# what to lead?\n",
+    "lead_bot = BotLead([True, True], hand, models, sampler, seat=2, dealer=3, ddsolver=dds, verbose=False)\n",
     "lead = lead_bot.find_opening_lead(auction)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a2b5fe25",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "D2"
+       "HA"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,36 +130,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "956ef356",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'card': 'Dx',\n",
-       "  'insta_score': 0.213,\n",
-       "  'expected_tricks_sd': 11.0,\n",
-       "  'p_make_contract': 0.9},\n",
+       "[{'card': 'HA',\n",
+       "  'insta_score': 0.313,\n",
+       "  'expected_tricks_dd': 11.4,\n",
+       "  'p_make_contract': 0.55,\n",
+       "  'expected_score_dd': 580},\n",
        " {'card': 'Sx',\n",
-       "  'insta_score': 0.12,\n",
-       "  'expected_tricks_sd': 11.0,\n",
-       "  'p_make_contract': 0.9},\n",
+       "  'insta_score': 0.177,\n",
+       "  'expected_tricks_dd': 11.6,\n",
+       "  'p_make_contract': 0.5,\n",
+       "  'expected_score_dd': 668},\n",
        " {'card': 'CQ',\n",
-       "  'insta_score': 0.109,\n",
-       "  'expected_tricks_sd': 11.3,\n",
-       "  'p_make_contract': 0.6},\n",
-       " {'card': 'Hx',\n",
-       "  'insta_score': 0.192,\n",
-       "  'expected_tricks_sd': 11.4,\n",
-       "  'p_make_contract': 0.6},\n",
-       " {'card': 'Cx',\n",
-       "  'insta_score': 0.126,\n",
-       "  'expected_tricks_sd': 11.5,\n",
-       "  'p_make_contract': 0.4}]"
+       "  'insta_score': 0.357,\n",
+       "  'expected_tricks_dd': 11.8,\n",
+       "  'p_make_contract': 0.4,\n",
+       "  'expected_score_dd': 824},\n",
+       " {'card': 'Dx',\n",
+       "  'insta_score': 0.124,\n",
+       "  'expected_tricks_dd': 11.8,\n",
+       "  'p_make_contract': 0.4,\n",
+       "  'expected_score_dd': 824}]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,10 +183,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7cb2bf98",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['x.A9xxxx.Q8x.QJx T8xx.KJ.J9x.AK98 QJ9.T8x.Txxxx.xx AKxxx.Qx.AK.Txxx 0.63672',\n",
+       " 'x.A9xxxx.Q8x.QJx KT8.Tx.JTx.AK9xx Jxxx.J8x.9xxxx.8 AQ9xx.KQ.AK.Txxx 0.63574',\n",
+       " 'x.A9xxxx.Q8x.QJx 9xx..KJxx.AKT9xx xx.QT8xx.Txxx.xx AKQJT8x.KJ.A9.8x 0.63135',\n",
+       " 'x.A9xxxx.Q8x.QJx xxx.KQx.xxx.AKTx T9xx.T8.JT9xx.xx AKQJ8.Jx.AK.98xx 0.63086',\n",
+       " 'x.A9xxxx.Q8x.QJx T9xx.KJx.9xx.AKx K8x.T8.Txxx.98xx AQJxx.Qx.AKJ.Txx 0.62988',\n",
+       " 'x.A9xxxx.Q8x.QJx KTxx.QTx.Jx.AKTx Jxx.J8x.T9xxx.xx AQ98x.K.AKx.98xx 0.62891',\n",
+       " 'x.A9xxxx.Q8x.QJx Q8xx.Txx.KT.AK8x x.J8.J9xxxx.xxxx AKJT9xx.KQ.Ax.T9 0.62891',\n",
+       " 'x.A9xxxx.Q8x.QJx T9xx.Qxx.Kx.AK9x 8xx.T8.J9xx.Txxx AKQJx.KJ.ATxx.8x 0.62793',\n",
+       " 'x.A9xxxx.Q8x.QJx Qxx.K8x.ATx.K9xx T9xx.x.J9xxxx.xx AKJ8x.QJT.K.AT8x 0.62744',\n",
+       " 'x.A9xxxx.Q8x.QJx Q8x.QTx.K9.A9xxx T9.J8x.JTxxxx.KT AKJxxxx.K.Ax.8xx 0.62744',\n",
+       " 'x.A9xxxx.Q8x.QJx 8xx.KJ8.Txx.AK9x QTxx.T.9xxx.T8xx AKJ9x.Qxx.AKJ.xx 0.62744',\n",
+       " 'x.A9xxxx.Q8x.QJx 9xx.QTxx.KJx.AKx JT8x.8.T9xxx.T98 AKQxx.KJ.Ax.xxxx 0.62695',\n",
+       " 'x.A9xxxx.Q8x.QJx 8xx.Q8.KTx.AK8xx T9x.JTx.J9xxxx.T AKQJxx.Kx.A.9xxx 0.62646',\n",
+       " 'x.A9xxxx.Q8x.QJx KQ9.QJ.JTx.K9xxx Txx.KT8x.9xx.8xx AJ8xxx.x.AKxx.AT 0.62598',\n",
+       " 'x.A9xxxx.Q8x.QJx KJT9.Jx.Jxx.AK9x xxx.QT8x.Txxx.T8 AQ8xx.K.AK9.xxxx 0.62598',\n",
+       " 'x.A9xxxx.Q8x.QJx AQJ.KJ8.Jx.T98xx 9x.Txx.9xxx.Axxx KT8xxxx.Q.AKTx.K 0.62598',\n",
+       " 'x.A9xxxx.Q8x.QJx 9xx.QJ8.x.AKT9xx AT8x.Txx.JTx.8xx KQJxx.K.AK9xxx.x 0.62500',\n",
+       " 'x.A9xxxx.Q8x.QJx Kxxx.Q8.Txx.AK8x T8x.JTx.J9xx.xxx AQJ9x.Kx.AKx.T9x 0.62500',\n",
+       " 'x.A9xxxx.Q8x.QJx QJx.Qx.9xx.AK9xx 98xx.JTx.Jxxx.8x AKTxx.K8.AKT.Txx 0.62354',\n",
+       " 'x.A9xxxx.Q8x.QJx xxx.KJT.AKx.Txxx Q8xx.8x.JT9x.98x AKJT9.Qx.xxx.AKx 0.62354']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# each row is one sample board\n",
     "# the hands are in the order: You, LHO, Partner, RHO. \n",
@@ -187,7 +228,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -201,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
