--- a/src/examples/OpeningLead-hf.ipynb
+++ b/src/examples/OpeningLead-hf.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e299ffcc-5180-4607-b6f8-c7280208d9c6",
    "metadata": {
     "tags": []
@@ -25,20 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "26570686",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "non-resource variables are not supported in the long term\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "os.chdir('..')\n",
@@ -51,33 +41,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "fe373c76",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Python311\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 14.45it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 14.54it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 14.16it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 14.71it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'D:\\\\github\\\\ben\\\\src\\\\hfmodels'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import huggingface_hub\n",
     "import os\n",
@@ -94,24 +61,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "627ca134-93a3-4d36-bc4d-a1207d84cd88",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Restoring parameters from hfmodels/lead-1000000\n",
-      "INFO:tensorflow:Restoring parameters from hfmodels/lead-1000000\n",
-      "INFO:tensorflow:Restoring parameters from hfmodels/binfo-100000\n",
-      "INFO:tensorflow:Restoring parameters from hfmodels/bidding-100000\n",
-      "INFO:tensorflow:Restoring parameters from hfmodels/lr3-1000000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from nn.leader import Leader\n",
     "from nn.bid_info import BidInfo\n",
@@ -128,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "c3397678",
    "metadata": {},
    "outputs": [],
@@ -139,29 +94,20 @@
     "# the auction goes:\n",
     "auction = [\"1C\",\"1D\",\"1S\",\"2D\",\"X\",\"PASS\",\"2S\",\"PASS\",\"3C\",\"PASS\",\"3N\",\"PASS\",\"4S\",'PASS', 'PASS', 'PASS']\n",
     "\n",
-    "# what to lead?\n",
+    "from ddsolver import ddsolver\n",
+    "dds = ddsolver.DDSolver()\n",
     "\n",
-    "lead_bot = BotLead([True, True], hand, models, sampler, False)\n",
+    "# what to lead?\n",
+    "lead_bot = BotLead([True, True], hand, models, sampler, dds, False)\n",
     "lead = lead_bot.find_opening_lead(auction)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a2b5fe25",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "H7"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lead.card"
    ]
@@ -178,32 +124,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "956ef356",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'card': 'Hx',\n",
-       "  'insta_score': 0.612,\n",
-       "  'expected_tricks_sd': 9.34,\n",
-       "  'p_make_contract': 0.51},\n",
-       " {'card': 'DA',\n",
-       "  'insta_score': 0.159,\n",
-       "  'expected_tricks_sd': 9.38,\n",
-       "  'p_make_contract': 0.51},\n",
-       " {'card': 'HT',\n",
-       "  'insta_score': 0.065,\n",
-       "  'expected_tricks_sd': 9.35,\n",
-       "  'p_make_contract': 0.51}]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lead.to_dict()['candidates']"
    ]
@@ -223,30 +147,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "7cb2bf98",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['KQx.AJx..KQ8xxxx AJx.Kxx.KJxxx.JT 98xx.9xx.QTxxx.A 0.09477',\n",
-       " 'Axx.AK9x.x.AQxxx K9x.xx.QJxxx.KJ8 QJ8x.Jxx.KTxx.Tx 0.07342',\n",
-       " 'KJx.AJ9x.K.KJ8xx A8x.xxx.JTxxx.Ax Q9xx.Kx.Qxxx.QTx 0.06904',\n",
-       " 'AKQ.AJxx..QT8xxx 8xx.xx.KQxxxx.AJ J9xx.K9x.JTxx.Kx 0.06505',\n",
-       " 'Qxx.AJ9x.K.AQJ8x K9x.xx.QTxxx.KTx AJ8x.Kxx.Jxxx.xx 0.05431',\n",
-       " 'J9x.AKJx.x.AQ8xx A8x.9xx.QJxxx.Jx KQxx.xx.KTxx.KTx 0.05310',\n",
-       " 'A9x.KJ9x.x.AK8xx Kxx.Ax.QTxxx.JTx QJ8x.xxx.KJxx.Qx 0.05246',\n",
-       " 'Kx.K9xx.xx.AKQxx AJx.Jx.QTxxx.J8x Q98xx.Axx.KJx.Tx 0.04814',\n",
-       " 'AJ8.xxx..AKQ8xxx K9x.AKJx.Jxxxx.x Qxxx.9x.KQTxx.JT 0.04288',\n",
-       " 'K9x.Jx.x.AKQJ8xx Ax.K9xx.QJTxxx.x QJ8xx.Axx.Kxx.Tx 0.03857']"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# each row is one sample board\n",
     "# the hands are in the order: LHO, Partner, RHO. Your cards are not shown as they are fixed/\n",
@@ -257,7 +161,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -271,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
